--- a/_posts/2025-07-16-peanut.md
+++ b/_posts/2025-07-16-peanut.md
@@ -14,6 +14,7 @@ published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/peanut
 image:
   path: wc:A_Peanut_Plant%2C_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg
+auto_float: true
 ---
 
 
@@ -25,29 +26,29 @@ Despite its English name and nutlike taste, the peanut is not a nut. This mighty
 
 While the largest peanut-producing nations are now China, India, Nigeria, and the United States, the plant was first cultivated by Andean civilizations in South America.[^1] Its migration around the world altered global food production and supply forever, rendering it one of the most successful of New World plants disseminated via the [Columbian Exchange](Q767253). More than just a food source, the peanut has been a protagonist in histories of global trade, slavery, and colonization and has come to be imbued with rich cultural meanings.
 
-{% include embed/map.html center="17.97738,21.09375" zoom="1" basemap="Esri_WorldPhysical" caption="The distribution of Arachis hypogaea around the world, with its native range shown in orange." geojson="distributionmap_native_introduced.json~Distribution and native range of Arachis hypogaea." class="right" %}
+{% include embed/map.html center="17.97738,21.09375" zoom="1" basemap="Esri_WorldPhysical" caption="The distribution of Arachis hypogaea around the world, with its native range shown in orange." geojson="distributionmap_native_introduced.json~Distribution and native range of Arachis hypogaea." %}
 
 # The Origins of Peanut Cultivation, Consumption, and Use
 
 The peanut is one of many species of the genus [_Arachis_](https://powo.science.kew.org/taxon/urn:lsid:ipni.org:names:30003907-2) with a native range spanning modern-day northern Argentina, Bolivia, Paraguay, Uruguay, and part of Brazil. More specifically, the peanut is a natural hyrbid of [two wild species](https://www.scientificamerican.com/article/modern-peanut-s-wild-cousin-thought-extinct-found-in-andes/) that originated in what is now [Bolivia](distribution/flyto/-19.922,-64.061,6) 10,000 years ago.[^2] The exact period of peanut cultivation by [Andean civilizations](Q3122657) is unclear but domesticated peanut remains have been dated back more than 7,000 years.[^3] The high protein content of the peanut made it an important calorie-dense feature of the Andean diet.
 
-{% include embed/map.html id="distribution" center="-18.31213,-24.96094" zoom="2" basemap="Esri_WorldPhysical" caption="The distribution of Arachis hypogaea around the world, with its native range shown in orange." markers="" geojson="peanutdistributionmap.json~Distribution of Arachis hypogaea (yellow)." class="right" %}
+{% include embed/map.html id="distribution" center="-18.31213,-24.96094" zoom="2" basemap="Esri_WorldPhysical" caption="The distribution of Arachis hypogaea around the world, with its native range shown in orange." markers="" geojson="peanutdistributionmap.json~Distribution of Arachis hypogaea (yellow)." %}
 
 In addition to being an important food source, peanuts were also a prestigious item for societal elites, and held symbolic and religious significance in pre-colonial [Peru](Q419). The [Moche civilization](Q208188) immortalized peanuts in metalwork and on ritual and funerary ceramics, and associated them with death, agricultural production, and fertility, in part because of the peanut’s subterranean growth process.[^4] They were also used in competitive events and as a ceremonial offering. The high status of peanuts is perhaps best immortalized in an elaborate gold and silver necklace from the [royal tombs](http://pdf.blucher.com.br.s3-sa-east-1.amazonaws.com/designproceedings/icdhs/icdhs-001.pdf) at [Sipán](Q2716571) where the warrior-priest leaders of the Moche were buried.[^5] 
 
-{% include embed/image.html src="Moche_Sipan_neclkace_Photograph_by_Susan_Einstein_courtesy_of_Christopher_Donnan_Ag_Data_Commons.jpg" caption="Peanut Necklace, Tomb 1, Royal Tombs of Sipán, Moche civilization, Peru, c.300 CE, gold and silver, diam. 20 inches, Museo Regional Arqueológico Enrique Bruning de Lambayeque. Public domain. Photograph by Susan Einstein, courtesy of Christopher Donnan, Ag Data Commons." aspect="0.95" class="right" %}
+{% include embed/image.html src="Moche_Sipan_neclkace_Photograph_by_Susan_Einstein_courtesy_of_Christopher_Donnan_Ag_Data_Commons.jpg" caption="Peanut Necklace, Tomb 1, Royal Tombs of Sipán, Moche civilization, Peru, c.300 CE, gold and silver, diam. 20 inches, Museo Regional Arqueológico Enrique Bruning de Lambayeque. Public domain. Photograph by Susan Einstein, courtesy of Christopher Donnan, Ag Data Commons." aspect="0.95" %}
 
 Mestizo chronicler [Inca Garcilaso de la Vega](Q334711) (1539–1616) documented the presence of peanuts in colonial Peru. Born there and educated in Spain, [de la Vega](https://www.learner.org/series/american-passages-a-literary-survey/exploring-borderlands-video/garcilaso-de-la-vega-1539-1616/) drew on direct experience and knowledge of Incan culture shared through his matrilineal relatives to offer a unique perspective on [Inca cuisine](Q2037505). In his [1609 history of the Inca civilization,](https://archive.org/details/primerapartedelo00vega/page/n443/mode/2up?q=ynchic) the author records peanuts–[_ynchic_](img1/zoomto/278,1157,702,662)–being eaten toasted and, in combination with honey, used to make a kind of nougat. He notes peanuts cause a headache when eaten raw and that peanut oil can be extracted and used to cure many illnesses.[^6]
 
-`image #img1 src=primerapartedelo00vega_0444.jpg aspect=0.71 .small`
+{% include embed/image.html id="img1" src="primerapartedelo00vega_0444.jpg" aspect="0.71" %}
 
 Peanuts gradually spread from Peru to [Mesoamerica](Q13703) via Indigenous trade networks by the 1500s. In the Aztec capital of [Tenochtitlan](Q13695), the location of present-day [Mexico City](tenochtitlan/flyto/19.433333,-99.133333,6), the peanut was known as _tlalcacahuatl_ from the words _tlalli_ (earth) and _cacahuatl_ ([cacao]([https://lab.plant-humanities.org/cacao/)), giving rise to one of the Spanish words for peanut, _cacahuate/cacahuete_. This suggests that [Nahuatl](Q13300)-speaking people may have been the first humans to combine these two now-ubiquitous flavors.[^7]
 
-{% include embed/map.html id="tenochtitlan" center="-1.76453,-42.1875" zoom="2" basemap="Esri_WorldPhysical" caption="Tenochtitlan, the location of present-day Mexico City." markers="" geojson="peanutdistributionmap.json~Distribution of Arachis hypogaea (yellow)." class="right" %}
+{% include embed/map.html id="tenochtitlan" center="-1.76453,-42.1875" zoom="2" basemap="Esri_WorldPhysical" caption="Tenochtitlan, the location of present-day Mexico City." markers="" geojson="peanutdistributionmap.json~Distribution of Arachis hypogaea (yellow)." %}
 
 The Nahua also valued the peanut for its healing properties. Nahua methods of preparing and using the plant to treat illness are recorded in the codex [_Historia general de las cosas de Nueva España_ (General History of the Things of New Spain),](https://www.loc.gov/item/2021667837) completed in 1577. Compiled by the Spanish Friar [Bernardino de Sahagún](Q379972) (1499–1590), in collaboration with Indigenous authors and artists, the twelve-volume codex provides a comprehensive account of Nahua culture, society, and natural history. [Book Eleven](https://www.loc.gov/resource/gdcwdl.wdl_10622/?sp=282&r=-0.855,0,2.709,1.312,0) describes the peanut, identified as _tlalacacahuatl_ in Nahuatl, as a root that can be ground up into water and given to those with a fever, allowing them to expel the ailment through their urine.[^8]
 
-{% include embed/image.html src="iiif-service_gdc_gdcwdl_wd_l__10_62_2_wdl_10622_MedPalat220_03_0598-full-pct_100-0-default.jpg" caption="Peanut plant, Bernardino De Sahagún, Book XI, Historia general de las cosas de Nueva España (Florentine Codex), 1577, Biblioteca Medicea Laurenziana via World Digital Library, public domain." source="https://tile.loc.gov/image-services/iiif/service:gdc:gdcwdl:wd:l_:10:62:2:wdl_10622:MedPalat220_03_0598/full/pct:100/0/default.jpg" region="1483,3504,3083,2688" aspect="0.76" class="right" %}
+{% include embed/image.html src="iiif-service_gdc_gdcwdl_wd_l__10_62_2_wdl_10622_MedPalat220_03_0598-full-pct_100-0-default.jpg" caption="Peanut plant, Bernardino De Sahagún, Book XI, Historia general de las cosas de Nueva España (Florentine Codex), 1577, Biblioteca Medicea Laurenziana via World Digital Library, public domain." source="https://tile.loc.gov/image-services/iiif/service:gdc:gdcwdl:wd:l_:10:62:2:wdl_10622:MedPalat220_03_0598/full/pct:100/0/default.jpg" region="1483,3504,3083,2688" aspect="0.76" %}
 
 # Out of the Americas
 
@@ -55,69 +56,69 @@ The Spanish first encountered peanuts in the late fifteenth century on [Hispanio
 
 [Spanish galleons](Q683846) transported peanuts westward from the Americas to [China, the Philippines, and the Pacific Islands](trade-routes/flyto/5.20,131.31,4) throughout the sixteenth century. Simultaneously, the Portuguese, who encountered the legume in Brazil around 1500, transported peanuts around the world to [Portuguese enclaves on the west coast of Africa](trade-routes/flyto/-16.13,-12.30,3). From there, it spread across the continent. The peanut was often used as sustenance for enslaved peoples as it could be stored for long periods of time and its hard outer shell helped protect it from spoilage.[^11] From Africa, the peanut traveled to [Portuguese enclaves in India](trade-routes/flyto/2.64,60.29,2) and eventually to China.
 
-{% include embed/map.html id="trade-routes" center="6.25599,11.95313" zoom="1" basemap="Esri_WorldPhysical" caption="Spread of peanuts in the lands claimed by the Spanish (blue) and Portuguese (red) Empires around 1600. This largely happened via the main trade routes of each empire, also shown here." geojson="traderoutesmap.json" class="right" %}
+{% include embed/map.html id="trade-routes" center="6.25599,11.95313" zoom="1" basemap="Esri_WorldPhysical" caption="Spread of peanuts in the lands claimed by the Spanish (blue) and Portuguese (red) Empires around 1600. This largely happened via the main trade routes of each empire, also shown here." geojson="traderoutesmap.json" %}
 
 The first mention of peanuts in a Chinese text dates to 1503, a mere decade after Christopher Columbus’ "discovery" of the Americas. The manuscript describes boiled or cooked peanuts as "delicious" and gives the origin of its Chinese name 落花生 _luo hua sheng_ (commonly now just 花生 _hua sheng_), literally "born from a fallen flower," which references how the peanut fruits below ground.[^12] Historical records related to [Changshu county](Q1015805) indicate that peanuts were cultivated there as early as 1538.[^13] Cultivation expanded to [Guangdong](china-spread/flyto/23.17,113.27,5) by the seventeenth century and in the following century, to the Guangdong delta and Taiwan.
 
-{% include embed/map.html id="china-spread" center="24.187,89.046" zoom="3" basemap="Esri_WorldPhysical" caption="Spread of peanuts to China." markers="" geojson="traderoutesmap.json" class="right" %}
+{% include embed/map.html id="china-spread" center="24.187,89.046" zoom="3" basemap="Esri_WorldPhysical" caption="Spread of peanuts to China." markers="" geojson="traderoutesmap.json" %}
 
 In China, peanuts were a luxury food served at banquets and out of reach for many until the nineteenth century. The peanut came to be imbued with cultural meanings as well, as shown in this [Qing Dynasty](Q8733) agate carving depicting a pair of peanuts alongside red dates. The carving is a play on words: the characters for red date (枣, _zao_) and peanut (生, _sheng_), are homophones for the first two characters of the auspicious greeting [早生贵子 zao sheng gui zi,](https://www.metmuseum.org/art/collection/search/44155?ft=peanut&amp;offset=0&amp;rpp=40&amp;pos=13) an encouragement for newlywed couples to soon have children.
 
-{% include embed/image.html src="met-44155_196170.jpg" aspect="1.33" class="right" %}
+{% include embed/image.html src="met-44155_196170.jpg" aspect="1.33" %}
 
 # African Diaspora Culture
 
 Peanuts’ journey north from South America was circuitous—in fact, they were introduced to North America through Africa, crossing the Atlantic in the [hulls of slave ships.](https://slaveryandremembrance.org/articles/article/?id=A0057) This history is embedded in the [language of peanuts](https://collections.telfair.org/objects/6549/untitled-peanuts)—the common moniker "goober" entered American English from _nguba_ in [Kimbundu](Q35891), a language spoken in Angola; "pinder," another term for peanuts in the American South, derives from _mpinda_ in the [Kongo](Q33702) language.[^14] The adoption of these loanwords by colonial English speakers in plantation societies evidences the ingenuity and exploitation of enslaved Africans: they grew peanuts in their food plots and their knowledge of cultivation methods was in turn appropriated by slaveholders along with African names for the plant.[^15]
 
-{% include embed/image.html src="yearbook189500unit_0206.jpg" aspect="0.58" class="right" %}
+{% include embed/image.html src="yearbook189500unit_0206.jpg" aspect="0.58" %}
 
 # Mass Consumption: Peanuts as American Staple 
 
 In the early 1800s, peanuts were planted by communities of enslaved persons and were otherwise used as feed for livestock in the southern United States. It was during the [Civil War](Q8676) that they became more widely popular among southern whites. Southerners turned to peanuts in the face of wartime food shortages, and the crop’s military utility was exploited as peanut oil replaced embargoed northern whale oil as machinery lubricant.[^16] The popularity of peanuts at the time is commemorated in ["Goober Peas,"](https://www.youtube.com/watch?v=RBOxw6vbDyo) a folk song sung by Confederate soldiers. The lyrics and music are humorously attributed to "A. Pinder" and "P. Nut," both puns on the peanut’s name. 
 
-{% include embed/image.html src="wc:18660509_Goober_Peas_-_lyrics_-_Thomasville_Southern_Enterprise_(Georgia).jpg" caption="Lyrics of the folk song “Goober Peas,” printed in Southern Enterprise, Thomasville, Georgia, U.S., May 9, 1866." aspect="1.08" class="right" %}
+{% include embed/image.html src="wc:18660509_Goober_Peas_-_lyrics_-_Thomasville_Southern_Enterprise_(Georgia).jpg" caption="Lyrics of the folk song “Goober Peas,” printed in Southern Enterprise, Thomasville, Georgia, U.S., May 9, 1866." aspect="1.08" %}
 
 After the war, spurred on by advances in agricultural technology, the use of peanut spread throughout the country. Instrumental to this was [George Washington Carver](Q296898) (c.1864–1943), the pioneering [Black agricultural scientist](https://libguides.nybg.org/c.php?g=1003078&p=7264400) who devoted much of his career to popularizing the crop in the South. Carver, who was born into slavery in Missouri and taught at the [Tuskegee Institute](Q1682329) during his scientific career, sought to promote crops that could be planted as an alternative to cotton. Carver proposed the cultivation of peanuts as a means to rectify the widespread nutrient depletion and erosion in southern soils caused by the [monoculture](Q220212) of cotton. As nitrogen-fixing legumes, peanuts could return nutrients to the soil as part of a crop rotation that would boost the yield of future cotton plantings.
 
 <!-- Smithsonian image not found
-{% include embed/image.html manifest="https://ids.si.edu/ids/manifest/NPG-NPG_92_156Carver-000001" caption="Clifton Johnson, George Washington Carver, Alabama, c.1900, gelatin silver print, 17.3 x 12.3 cm (sheet), National Portrait Gallery, Smithsonian Institution." class="right" %}
+{% include embed/image.html manifest="https://ids.si.edu/ids/manifest/NPG-NPG_92_156Carver-000001" caption="Clifton Johnson, George Washington Carver, Alabama, c.1900, gelatin silver print, 17.3 x 12.3 cm (sheet), National Portrait Gallery, Smithsonian Institution." %}
 -->
 
 An influential Black public figure during the age of [segregation](Q59816), Carver promoted peanut production on a local and a national scale.[^17] In 1922, he testified before Congress on behalf of peanut farmers for establishing protections for domestic peanuts against rising Chinese imports. He also invented a number of uses for peanuts, including products made from peanut oil. And a [1916 Tuskegee Institute report](https://archive.org/details/CAT31355396) authored by Carver illustrates his creativity in devising 105 recipes for peanut-based foods.[^18] Peanuts were now associated with culinary innovation and agricultural advancement—and their star was still on the rise.
 
-{% include embed/image.html src="Dr_George_Washington_Carver_US_Depart_Ag_Flickr_public_domain.jpg" caption="Dr. George Washington Carver, Tuskegee University, Alabama, September 1938, U.S. Department of Agriculture. Public domain. Photo Courtesy National Archives and Records Administration." aspect="0.92" class="right" %}
+{% include embed/image.html src="Dr_George_Washington_Carver_US_Depart_Ag_Flickr_public_domain.jpg" caption="Dr. George Washington Carver, Tuskegee University, Alabama, September 1938, U.S. Department of Agriculture. Public domain. Photo Courtesy National Archives and Records Administration." aspect="0.92" %}
 
 # Peanut Butter: A Distinctly North American Foodstuff
 
 Peanut production in the United States increased with the advent and popularization of peanut butter in North America.[^19] While George Washington Carver is sometimes credited with the invention of peanut butter, U.S. patents for "peanut paste" and "nut butter" began to appear in the late nineteenth century. They included recipes calling for roasting and shelling the peanuts, and then grinding the nuts until they congeal into a paste, with salt and oil as optional additions. At first a tea-time delicacy, peanut butter was marketed as a protein-packed meat replacement during the food rationing of [World War I](Q361), and its utility as a cheap energy source [made it ubiquitous](http://libcdm1.uncg.edu/cdm/ref/collection/HENP/id/681) during the [Great Depression](Q8698).
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" %}
 
 Throughout the first half of the twentieth century, a series of relentless American ad campaigns marketed peanut butter as suitable for all kinds of dishes, from peanut butter sandwiches and chocolate-peanut candies to savory roasts and soups. The [American Empire](Q605269) shaped the peanut-related foodways of its colonies as well, including the Philippines.[^20] And the peanut is comparatively prevalent in Germany due to the historical and contemporary presence of American troops.
 
-{% include embed/image.html src="stnicholasserial4721dodg_0742.jpg" class="right" %}
+{% include embed/image.html src="stnicholasserial4721dodg_0742.jpg" %}
 
 # Selling Peanuts in Public Spaces
 
 A characteristic feature in the history and contemporary life of peanuts is their presence in public spaces. The peanut vendor sells peanuts: roasted or boiled, shelled or de-shelled, in street carts or on the roadside, in cones of newspaper or in paper bags. It is a global practice with similarities and differences specific to geographic and temporal context. Indeed, journalist Jori Lewis has [explored](https://civileats.com/2022/04/12/slaves-for-peanuts-tells-the-tragic-story-behind-americas-favorite-snack/) the significance of peanut vendors working in the United States after the Civil War. According to Lewis, vendors faced public scorn due to pejorative associations of the peanut with enslaved persons and [stereotypes of race and class.](https://nmaahc.si.edu/explore/stories/popular-and-pervasive-stereotypes-african-americans)[^21]
 
-{% include embed/image.html src="harpersweeklyv14bonn_0463.jpg" class="right" %}
+{% include embed/image.html src="harpersweeklyv14bonn_0463.jpg" %}
 
 In contrast to the peanut vendor’s low social standing in the late nineteenth-century United States, the popularity of the street vendor in 1920s Havana is brilliantly conveyed in the song ["El Manisero" ("The Peanut Vendor")](Q3050049) by the Cuban composer and songwriter [Moisés Simons](Q661928).[^22] The 1927 composition is sung from the perspective of the seller and is a blending of the _[son](Q4428744)_ and _[pregón](Q5681688)_ genres. The lyrics tell of a vendor trying to tempt a housewife to buy a cone of peanuts: his repeated sales cry of "_maní_, _maní_, _maní_" is a typical feature of _pregones_. Like the song "El Manisero," fusing African and Hispanic musical traditions, the peanut vendor and peanuts in 1920s Cuba would have held a blend of different cultural associations.
 
-{% include embed/youtube.html id="essMVyS1Om0" caption="The Peanut Vendor - Don Azpiazu (Antonio Machin, vocal), 1931, the78prof, YouTube." aspect="1.6" class="right" %}
+{% include embed/youtube.html vid="essMVyS1Om0" caption="The Peanut Vendor - Don Azpiazu (Antonio Machin, vocal), 1931, the78prof, YouTube." aspect="1.55" %}
 
 Besides selling peanuts on streets and roadsides, vendors in the United States also were working in other public spaces like circuses, zoos, theaters, and fairs at the end of the nineteenth century. Because the vendors mainly sold peanuts in the shell, it became commonplace for purchasers to eat the delicious nuts and discard the shells on the ground. By the mid-1920s, many cities prohibited the sale of in-shell peanuts to curb littering.[^23] While peanut shells were considered litter in public spaces, the hull and broken peas left over from the industrial de-shelling process were used in the preparation of livestock feed, especially during years of low-quality crops or poor prices.
 
-{% include embed/image.html src="master-pnp-var-0800-0837-0837r.jpg" caption="Charles Frohman’s production, The Circus Girl, 1897, theatrical poster, Library of Congress Prints and Photographs Division, Washington, D.C., no known restrictions on publication." source="https://tile.loc.gov/storage-services/master/pnp/var/0800/0837/0837r.jpg" aspect="0.67" class="right" %}
-{% include embed/image.html src="service-pnp-fsa-8b23000-8b23300-8b23344v.jpg" caption="Russell Lee, Filling bags with feed made from peanut shells and blackstrap molasses. Peanut-shelling plant. Comanche, Texas, 1939, Farm Security Administration, Library of Congress Prints and Photographs Division, Washington, D.C., no known restrictions on publication." source="https://cdn.loc.gov/service/pnp/fsa/8b23000/8b23300/8b23344v.jpg" aspect="1.3" class="right" %}
+{% include embed/image.html src="master-pnp-var-0800-0837-0837r.jpg" caption="Charles Frohman’s production, The Circus Girl, 1897, theatrical poster, Library of Congress Prints and Photographs Division, Washington, D.C., no known restrictions on publication." source="https://tile.loc.gov/storage-services/master/pnp/var/0800/0837/0837r.jpg" aspect="0.67" %}
+{% include embed/image.html src="service-pnp-fsa-8b23000-8b23300-8b23344v.jpg" caption="Russell Lee, Filling bags with feed made from peanut shells and blackstrap molasses. Peanut-shelling plant. Comanche, Texas, 1939, Farm Security Administration, Library of Congress Prints and Photographs Division, Washington, D.C., no known restrictions on publication." source="https://cdn.loc.gov/service/pnp/fsa/8b23000/8b23300/8b23344v.jpg" aspect="1.3" %}
 
 # The Groundnut Scheme in East Africa
 
 Peanuts played a critical role in the British Empire, as well, as demonstrated by the [Tanganyika groundnut scheme](Q2392428). In 1946, British businessmen and officials [developed a plan](https://archive.org/details/notjustpeanutsst00brit/mode/1up) to clear vast areas of vegetation in [Tanganyika](Q431731) for establishing a groundnut monoculture. The aim was to produce enough peanuts to supply Britain, still under government-enforced World War II rationing, with cooking oil and improve food provisions in colonial territories. Historical and environmental geographer Martin Mahoney has [explained](http://www.environmentandsociety.org/arcadia/enemy-nature-military-machines-and-technological-bricolage-britains-great-agricultural) how officials repurposed military technologies to wage a "war" against nature.[^24] Because the British government failed to adequately consider environmental conditions in Tanganyika, crops did not yield as expected and the project was abandoned in 1951.
 
 <!-- Not loading because spreadsheet not found
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" class="right" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" %}
 -->
 
 # Multispecies Consumption
