--- a/_posts/2025-07-16-cinnamon.md
+++ b/_posts/2025-07-16-cinnamon.md
@@ -14,6 +14,7 @@ published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/cinnamon
 image:
   path: banner.jpg
+auto_float: true
 ---
 
 
@@ -21,93 +22,93 @@ image:
 
 Between 2007 and 2014, the "[cinnamon challenge](Q420721)" was an internet hype. Although the instructions were simple enough—swallow a tablespoon of cinnamon at once—they proved to be virtually impossible to follow in practice. Trying to ingest dry, ground cinnamon bark initially causes a severe choke reaction, characterized by extreme exhalation of cinnamon powder (known as "dragon breath"). Subsequently, the cinnamon combines with saliva in the mouth to produce an indigestible clutter at the back of the throat. Thankfully, this [quite dangerous assignment](https://doi.org/10.1542/peds.2012-3418) will only be a marginal footnote to the history of cinnamon. Those who only know cinnamon from an endless number of ridiculous YouTube videos that recorded the challenge, or as a quotidian kitchen spice, will be surprised to learn that the real challenge—to find out what cinnamon actually is, as a plant and as a medicine—has been a centuries-long and ongoing effort.
 
-{% include embed/youtube.html id="cmpd58kMl2s" caption="Mythbusters Cinnamon Challenge." aspect="1.7" class="right" %}
+{% include embed/youtube.html vid="cmpd58kMl2s" caption="Mythbusters Cinnamon Challenge." aspect="1.55" %}
 
 # Forgotten Knowledge and Fabricated History
 
 Cinnamon had a long history before any European ever saw "true" cinnamon (_Cinnamomum verum_ J.Presl), which originally grew only on [Sri Lanka](Q854). Here lies the key to understanding the history of cinnamon: it is mostly about a plant-based product carrying that name, not about any particular plant species like _C. verum_. This is a crucial point, because a lot of confusion about cinnamon emanates from incorrectly equating _names_ with _plants_. To be more precise: in Latin Western Europe, it was assumed for centuries that the plants _cinnamomum_ (κιννάμωμον in Greek) and _cassia_ (κασία), as described by ancient medical authorities (notably [Dioscorides](Q297776)), are the same plants as those found in the [East Indies](Q213137) in the sixteenth century. A recent revaluation of archaeological, historical, linguistic, and botanical evidence, however, suggests that the cinnamon of ancient history was probably an East-African plant, _[Cassia abbreviata](Q145495)_ Oliv., which is not related to the genus _Cinnamomum_.[^ref1]
 
-{% include embed/image.html src="18040817.jpg" aspect="0.69" class="right" %}
+{% include embed/image.html src="18040817.jpg" aspect="0.69" %}
 
 How could this confusion last so long? One possible explanation for the shift from an East-African to a South-East-Asian plant is linguistic. In medieval Latin, the name for cinnamon from the East Indies was _canella_, which still resounds in many European languages today. For some reason, the names _canella_ and _cinnamomum_ both began to be associated with the East Indian spice in the Middle Ages.[^ref2] In the wake of the European voyages of discovery in the fifteenth and sixteenth centuries, European scholars writing about cinnamon would turn to classical, not medieval sources, to understand the spice and its properties. They managed to resolve the discrepancies they found between classical descriptions of the spice and the plant that was found in Sri Lanka. For instance, in his book [_Coloquios dos simples, e drogas he cousas mediçinais da Indiae_](https://books.google.com/books?id=np3nAm8zCOgC&pg=PA54-IA1#v=onepage&q&f=false) [(_Colloquies on the Simples and Drugs and Medical Things of India_)](http://digital.ub.uni-duesseldorf.de/vester/content/pageview/4968642) (1563), the Portuguese physician [Garcia de Orta](Q1493994), who worked in [Goa](Q553907), explained the differences between his own observations and classical authors’ descriptions of cinnamon by the fact that the latter had only known the processed spice, not the plant itself.[^ref3]
 
-{% include embed/image.html src="mobot31753003488159_0072.jpg" aspect="0.56" class="right" %}
+{% include embed/image.html src="mobot31753003488159_0072.jpg" aspect="0.56" %}
 
-{% include embed/image.html src="mobot31753000811387_0186.jpg" region="246,1762,1391,985" aspect="0.58" class="right" %}
+{% include embed/image.html src="mobot31753000811387_0186.jpg" region="246,1762,1391,985" aspect="0.58" %}
 
 Another, much more surprising reason for the long-lasting confusion over cinnamon, is the fact that the exact same issue still exists today. This is a striking example of forgotten knowledge in modern science. In the nineteenth century, Friedrich A. Flückiger and Daniel Hanbury already noted in their [_Pharmacographia_](https://www.biodiversitylibrary.org/page/36228360) (1874) that cinnamon in antiquity did not come from Sri Lanka. It only became a noticeable export from there in the thirteenth century, when political power on the island shifted to the cinnamon-producing areas in the southwest.[^ref4] Rather, they argued, the cinnamon of antiquity must have been _cassia lignea_—a common historical name for _cassia_, generally believed to be _[Cinnamomum cassia](Q204148)_ (L.) J.Presl—imported from China through Arabia and East Africa. Although this narrative is debatable, it is more plausible than the one proposed by J. Innes Miller (1969), who claimed there had been an interoceanic "Cinnamon Route" in antiquity, spanning all corners of the Indian Ocean. Although this idea is now rejected by historians, Sri Lanka still features in many accounts of cinnamon in antiquity.[^ref5]
 
-{% include embed/map.html center="-13.58629,107.92969" zoom="2" caption="The proposed &quot;Cinnamon Route&quot; of antiquity, by J. Innes Miller. According to this theory, the Indian Ocean world consisted of connected zones of maritime activity. In the green areas, single-outrigger canoes were the most important means of transportation, while the area outlined in red was dominated by double-outrigger canoes. With this theory, Miller was able to connect the East African origin of cinnamon—as mentioned in classical sources—with the native habitats of _Cinnamomum verum_ and _C. cassia_. Adaptation of the map in John M. Riddle, _Dioscorides on Pharmacy and Medicine_ (Austin: University of Texas Press, 1985), 99, which was based on J. Innes Miller, _The Spice Trade of the Roman Empire, 29 B.C. to A.D. 641_ (Oxford: Clarendon Press, 1969), 172. Miller himself based his theory on the work of James Hornell, _Water Transport: Origins & Early Evolution_ (Cambridge: The University Press, 1946)." geojson="Spice-Route-of-Antiquity_Miller-1969.json" class="right" %}
+{% include embed/map.html center="-13.58629,107.92969" zoom="2" caption="The proposed &quot;Cinnamon Route&quot; of antiquity, by J. Innes Miller. According to this theory, the Indian Ocean world consisted of connected zones of maritime activity. In the green areas, single-outrigger canoes were the most important means of transportation, while the area outlined in red was dominated by double-outrigger canoes. With this theory, Miller was able to connect the East African origin of cinnamon—as mentioned in classical sources—with the native habitats of _Cinnamomum verum_ and _C. cassia_. Adaptation of the map in John M. Riddle, _Dioscorides on Pharmacy and Medicine_ (Austin: University of Texas Press, 1985), 99, which was based on J. Innes Miller, _The Spice Trade of the Roman Empire, 29 B.C. to A.D. 641_ (Oxford: Clarendon Press, 1969), 172. Miller himself based his theory on the work of James Hornell, _Water Transport: Origins & Early Evolution_ (Cambridge: The University Press, 1946)." geojson="Spice-Route-of-Antiquity_Miller-1969.json" %}
 
 # Cinnamon as a Tool of Empire
 
 The attraction of cinnamon—true or other—as a means to enhance the power of state by displaying its control over exotic riches, predates the early modern period. For example, many coins from the reign of Roman emperor [Trajan](Q1425) (reign 98–117 CE) show a personification of Arabia, who holds a bundle of cinnamon sticks. This motif can be associated with Trajan’s conquests on the eastern periphery of the Roman empire, which he managed to extend briefly to the [Persian Gulf](Q34675). Such coins served as propaganda, emphasizing the empire’s authority over the conquered lands.[^ref6]
 
-{% include embed/image.html src="wc:Roman_Coin,_Denarius_of_Trajan_(FindID_963033).jpg" caption="Reverse side of a silver Roman denarius dating from the period 103-111 CE (reign of emperor Trajan), that was found in East Riding of Yorkshire, Britain." region="1414,152,1586,1031" aspect="1.87" class="right" %}
+{% include embed/image.html src="wc:Roman_Coin,_Denarius_of_Trajan_(FindID_963033).jpg" caption="Reverse side of a silver Roman denarius dating from the period 103-111 CE (reign of emperor Trajan), that was found in East Riding of Yorkshire, Britain." region="1414,152,1586,1031" aspect="1.87" %}
 
 The quest for spices, cinnamon among them, was one important aim that inspired Europeans of the fifteenth and sixteenth centuries to brave the oceans. [Columbus](Q7322), expecting to reach India, brought samples of cinnamon bark with him on his first journey to the Americas to help native inhabitants guide him to cinnamon trees, which he believed should grow there. He sent samples of a kind of white cinnamon—probably _[Canella winterana](Q2706419)_ (L.) Gaertn.—back to Spain from his second journey. Similarly, [Juan Sebastián Elcano](Q201510), who completed [Magellan’s](Q1496) circumnavigation of the world after his commander had been killed on the [Philippines](Q928), successfully petitioned the king to have cinnamon sticks, [cloves](Q26736), and [nutmeg](Q83165) depicted on his coat-of-arms to commemorate his role in opening up the spice route to the East Indies.[^ref7]
 
-{% include embed/image.html src="wc:Coat_of_Arms_of_Juan_Sebastián_Elcano_A-71.svg" aspect="0.57" class="right" %}
+{% include embed/image.html src="wc:Coat_of_Arms_of_Juan_Sebastián_Elcano_A-71.svg" aspect="0.57" %}
 
 Once true cinnamon had begun to be understood as cinnamon from Sri Lanka (historically referred to as Ceylon), European states strove to gain a foothold on the island and access the cinnamon trade. From the sixteenth century onward, local rulers bargained with the Portuguese, and later the Dutch, for a share in this trade, in exchange for political and military assistance against their rivals. The Portuguese made tentative attempts to create a monopoly after they first arrived on Sri Lanka in 1505. They soon realized that this was impossible without getting involved in local politics. Therefore, they engaged in "reluctant imperialism" to gain access to cinnamon: they needed a permanent presence on the island, and eventually signed an agreement with the king of [Kotte](Q1589163) in 1533 to buy large amounts of cinnamon.[^ref8]
 
-{% include embed/map.html center="8.050740,80.654834" zoom="7.4" caption="Sri Lanka in the sixteenth century (after 1521)." geojson="Kingdom-of-Kotte.json~Kingdom of Kotte (green)|Kingdom-of-Jaffna.json~Kingdom of Jaffna (red)|Wanni-region_north.json~Wanni region north (brown)|Wanni-region_south.json~Wanni region south (brown)|Kingdom-of-Kandy.json~Kingdom of Kandy (yellow)|Kingdom-of-Sitawaka.json~Kingdom of Sitawaka (purple)|Principality-of-Raigama.json~Principality of Raigama (blue)" class="right" %}
+{% include embed/map.html center="8.050740,80.654834" zoom="7.4" caption="Sri Lanka in the sixteenth century (after 1521)." geojson="Kingdom-of-Kotte.json~Kingdom of Kotte (green)|Kingdom-of-Jaffna.json~Kingdom of Jaffna (red)|Wanni-region_north.json~Wanni region north (brown)|Wanni-region_south.json~Wanni region south (brown)|Kingdom-of-Kandy.json~Kingdom of Kandy (yellow)|Kingdom-of-Sitawaka.json~Kingdom of Sitawaka (purple)|Principality-of-Raigama.json~Principality of Raigama (blue)" %}
 
 # Optimizing the Monopoly
 
 The Dutch made even stronger, concerted efforts to get a monopoly on cinnamon. They signed a treaty with the king of [Kandy](Q1530762) in 1638, hoping this would give them a share of the cinnamon trade, which was still dominated by the Portuguese. After the Portuguese defeats at [Colombo](Q35381) (1656) and [Jaffnapatnam](Q215277) (1658), the Dutch controlled many coastal areas of the island, while the kingdom of Kandy ruled the island’s interior. The relationship between the Dutch and the king of Kandy was strained. Cinnamon trees were scattered throughout the island’s forests, so groups of cinnamon peelers—specialized laborers from the [Sinhalese](Q932244) caste _[Salagama](Q3469487)_ (also known as _Saliya_ or _Chaliya_)—who worked for the Dutch often had to cross Portuguese as well as Kandian territory to reach the areas where the trees grew. As it was impossible for the Dutch to keep a military grip on this enormous territory, or to control individual groups of peelers, there was little that they could do when the peelers chose, or were forced, to switch allegiance. Therefore, in order not to interrupt the supply of cinnamon, bribing the king of Kandy became a ongoing means to make sure he left the peelers alone.
 
-{% include embed/map.html center="8.050740,80.654834" zoom="7.4" caption="Map of Ceylon (Sri Lanka) in the late eighteenth century. The red line indicates the border between the Dutch areas along the coast and the kingdom of Kandy in the island's interior. These were the borders after the war of 1760–1766 (see below). Coloured drawing on paper by Jean du Perron, 1789." class="right" %}
+{% include embed/map.html center="8.050740,80.654834" zoom="7.4" caption="Map of Ceylon (Sri Lanka) in the late eighteenth century. The red line indicates the border between the Dutch areas along the coast and the kingdom of Kandy in the island's interior. These were the borders after the war of 1760–1766 (see below). Coloured drawing on paper by Jean du Perron, 1789." %}
 
 Although their skills were indispensable for the cinnamon trade, peelers were treated harshly by the Dutch. Each year, the peelers gathered in Colombo for a ceremony where they pledged loyalty to the Dutch governor. There was a long peeling season for cinnamon between May and August, and a short season in January and February. On both occasions, groups of men were sent off into the woods with nothing but paring knives and a supply of rice. Adult men were obliged to bring back 12 _robes_ (56 pounds each) at the end of the summer season. Boys from age 12 had to contribute proportionally. Dutch sources from the colonial administration often complained that the peelers were lazy and unreliable, but these workers had a hard life. They were away from home for months, had to provide for themselves while working in the forests, where they were afflicted by diseases, and they were severely punished if they did not meet their quotas.[^ref9]
 
-{% include embed/image.html src="wc:AMH-7014-KB_Peeling_cinnamon_on_Ceylon.jpg" caption="“How cinnamon is peeled on the island of Ceylon”" aspect="0.65" class="right" %}
-{% include embed/image.html src="wc:Kaneel,_nootmuskaat,_kruidnagel_en_bamboe_Kaneel_en_Nootmus_Canelle,_Muscade,_Chasse_des_Elephans,_etc_Kruytnagelengewas_Girofle,_Bambous,_Montagne_brulante,_etc_(titel_op_object)_Les_Indes_Orientales_et_Occidentales_e,_BI-1972-1043-16.jpg" caption="Imaginary landscapes with spices from the East Indies." aspect="1.59" class="right" %}
+{% include embed/image.html src="wc:AMH-7014-KB_Peeling_cinnamon_on_Ceylon.jpg" caption="“How cinnamon is peeled on the island of Ceylon”" aspect="0.65" %}
+{% include embed/image.html src="wc:Kaneel,_nootmuskaat,_kruidnagel_en_bamboe_Kaneel_en_Nootmus_Canelle,_Muscade,_Chasse_des_Elephans,_etc_Kruytnagelengewas_Girofle,_Bambous,_Montagne_brulante,_etc_(titel_op_object)_Les_Indes_Orientales_et_Occidentales_e,_BI-1972-1043-16.jpg" caption="Imaginary landscapes with spices from the East Indies." aspect="1.59" %}
 
 The restrictions imposed by the Dutch on cinnamon exports made it the only real monopoly on Sri Lanka in the early modern period. Smuggling was severely punished. In 1704, Bengali traders were allowed to export small amounts of cinnamon, which would not affect the monopoly of the [Dutch East India Company (VOC)](Q159766) too much. In the 1720s, export restrictions were loosened for several products, but not cinnamon.[^ref10] The tight grip of the Dutch over this trade was also felt internally. Sri Lankan farmers had long been accustomed to clearing plots of forest to create temporary cultivated fields called _chenas_. Under Dutch rule, they were no longer allowed to practice [crop rotation](Q287854) on plots planted with cinnamon, so as not to diminish the total acreage. Around 1700, however, Pieter van Dam, long-term secretary to the VOC, calculated that Sri Lanka produced more than enough cinnamon to supply European and international markets. This assessment makes the suppression of _chena_ practices seem all the more exploitative.[^ref11]
 
-{% include embed/image.html src="NL-HaNA_4.VEL_939A-groot_cropped.jpg" caption="Drawing from 1720, showing the benefits that could be made from monocultures of cinnamon on temporary cleared fields (chenas)." aspect="1.42" class="right" %}
+{% include embed/image.html src="NL-HaNA_4.VEL_939A-groot_cropped.jpg" caption="Drawing from 1720, showing the benefits that could be made from monocultures of cinnamon on temporary cleared fields (chenas)." aspect="1.42" %}
 
 In 1760, local grievances about the VOC policy concerning _chenas_, and the treatment of peelers by Sinhalese and Dutch officials, created an explosive situation. Backed by the king of Kandy, the peelers rebelled, leading to a war that lasted until 1766. The rebellion finally may have caused the Dutch to rethink their approach to cinnamon production. Starting in 1769, governor [Iman Willem Falck](Q16836179) (in office 1765–1785) began to experiment with "cinnamon gardens" (_kaneeltuinen_), which amounted to nothing less than a successful colonial [plantation](Q188913) system. By the end of his governorship, there were 24 million cinnamon trees growing in these gardens, which increased to 609 million trees (!) by 1794.[^ref12]
 
-{% include embed/image.html src="NL-HaNA_4.VEL_935-groot.jpg" aspect="0.37" class="right" %}
+{% include embed/image.html src="NL-HaNA_4.VEL_935-groot.jpg" aspect="0.37" %}
 
 It was short-lived success, however. When the British took control over the Dutch territories on Sri Lanka in 1796, they failed to maintain the cinnamon plantation economy. Calls for free trade and better working conditions for the peelers, high export duties, and competition with cheaper _cassia_ cinnamon from Java finally led to reforms in 1833. But these measures came too late and were counterproductive: Britain sold many plantations to private owners, who switched to coffee and tea cultivation, thus ending the cinnamon production for years to come.[^ref13]
 
-{% include embed/image.html src="wc:Skinning_the_cinnamon_sticks,_Ceylon,_photo_from_The_Encyclopedia_of_Food_by_Artemas_Ward.jpg" aspect="1.65" class="right" %}
-{% include embed/image.html src="wc:Forming_the_cinnamon_quills,_Ceylon,_photo_from_The_Encyclopedia_of_Food_by_Artemas_Ward.jpg" aspect="1.18" class="right" %}
+{% include embed/image.html src="wc:Skinning_the_cinnamon_sticks,_Ceylon,_photo_from_The_Encyclopedia_of_Food_by_Artemas_Ward.jpg" aspect="1.65" %}
+{% include embed/image.html src="wc:Forming_the_cinnamon_quills,_Ceylon,_photo_from_The_Encyclopedia_of_Food_by_Artemas_Ward.jpg" aspect="1.18" %}
 
 # A Tool of Empire or a Tool of Science?
 
 Although cinnamon was a successful monopoly during the Dutch period, was it purely a tool of empire? Production and export were guarded as closely as possible, smuggling was prohibited, and living trees could not leave the island. The Dutch monopoly was about promoting commercial interests above anything else, but not all restrictions were commercially motivated. When the administrator of the Dutch possessions on the [Malabar coast](Q473181), [Hendrik Adriaan van Rheede tot Drakenstein](Q741104), experimented with the oil of local cinnamon as a medicine in 1675, he was reprimanded by [Rijckloff van Goens](Q1392981), the governor of Sri Lanka, for breaking the monopoly. The colonial government in [Batavia](Q1199713) agreed, but Van Rheede wrote a letter to justify his actions and continued his work. The actions of both Van Rheede and Van Goens were intended to demonstrate that the medicines from "their" respective regions were superior. In such instances, interests of empire and personal rivalry intertwined.[^ref14]
 
-{% include embed/image.html src="mobot31753003370076_0178.jpg" aspect="1.22" class="right" %}
+{% include embed/image.html src="mobot31753003370076_0178.jpg" aspect="1.22" %}
 
 Imperial agendas and a disinterested search for knowledge could also go hand in hand. The botanist [Paul Hermann](Q66569) was employed by the VOC between 1672 and 1677 to gather botanical knowledge on Sri Lanka. Although Hermann barely ventured beyond Colombo, he managed to collect an impressive amount of material, including many cinnamon specimens.[^ref15] Hermann’s collections sustained for decades scholarly interest in Sri Lankan flora. Many specimens served indirectly as input for the _[Species Plantarum](Q849308)_ (1753) of [Carl Linnaeus](Q1043), who dreamed of transplanting cinnamon to [Lapland](Q5700).[^ref16] But Hermann already knew that northern Europe was too cold for cinnamon: in spite of the VOC ban on exporting living plants, he had sent trees to several acquaintances in the [Dutch Republic](Q170072), none of which survived the cold winters.[^ref17] Despite the government restrictions, the exchange of knowledge and goods was evidently possible: an extensive, first-hand account of all the cinnamon varieties growing on Sri Lanka even made it into the _[Philosophical Transactions](Q913162)_ of the [Royal Society](Q123885) in 1730.[^ref18]
 
-{% include embed/image.html src="Cinnamon_from_Ceylon_with_flowers.jpg" caption="&quot;Cinnamon from Ceylon with flowers&quot;. Specimen of Cinnamomum verum J.Presl, from Paul Hermann’s herbarium of plants from Sri Lanka in Leiden, specimen no. L.2070171." attribution="Naturalis Biodiversity Center, Leiden. https://data.biodiversitydata.nl/naturalis/specimen/L.2070171" aspect="0.59" class="right" %}
+{% include embed/image.html src="Cinnamon_from_Ceylon_with_flowers.jpg" caption="&quot;Cinnamon from Ceylon with flowers&quot;. Specimen of Cinnamomum verum J.Presl, from Paul Hermann’s herbarium of plants from Sri Lanka in Leiden, specimen no. L.2070171." attribution="Naturalis Biodiversity Center, Leiden. https://data.biodiversitydata.nl/naturalis/specimen/L.2070171" aspect="0.59" %}
 
 # Cinnamon and Imperial Imagination
 
 Meanwhile, other countries were desperately trying to have access to cinnamon, especially Spain and its empire. Spain sought, ultimately without success, to procure cinnamon trees, or at least to replicate Dutch practices for cultivating such exotic plants in its colonies.[^ref19] The Spanish quest for cinnamon in the New World went back as far as the early days of exploration: in addition to Columbus’s efforts to find cinnamon on his voyages, the famous expedition of [Gonzalo Pizarro](Q435292) and [Francisco de Orellana](Q207901) along the [Amazon](Q3783) river (1541–1542) was also intended to find the legendary "Land of Cinnamon" (_País de la Canela_), which was associated with the land of gold, [El Dorado](Q192550). Their journey later inspired the French botanist [Joseph de Jussieu](Q1347343) to search for cinnamon lands in South America in the 1740s.[^ref20]
 
-{% include embed/image.html src="wc:Francisco_de_Orellana_Amazon_River_voyage_(1541-1542).svg" caption="The expedition of Gonzalo Pizarro and Francisco de Orellana along the Amazon river, 1541–1542." aspect="" class="right" %}
+{% include embed/image.html src="wc:Francisco_de_Orellana_Amazon_River_voyage_(1541-1542).svg" caption="The expedition of Gonzalo Pizarro and Francisco de Orellana along the Amazon river, 1541–1542." aspect="" %}
 
 The Spanish efforts to find cinnamon in the New World were not only intended to find an alternative to the true cinnamon of the Portuguese and the Dutch on Sri Lanka. There was more at stake. The commercial success of Spain’s European rivals in the East Indies made the [Cape of Good Hope](Q4092) the principal shipping route for such goods. The promise of South American riches could transform [Cape Horn](Q4078) into an alternative route, which would benefit Spain. This was an important aim for people like [Alonso de Ovalle](Q2839275), a Chilean [Jesuit](Q36380). His _Histórica Relación del Reyno de Chile_ (1646) was accompanied by a detailed map, that served as a visual propaganda tool for Spanish South America. The map highlights the continent’s natural resources, including areas of _[canela](img1/zoomto/6423,1032,659,467)_ and _[cynamomum](img1/zoomto/7756,2229,613,434)_ along the east coast.[^ref21] This was a strategy to draw attention to the potential of cinnamon production for the Spanish global empire.
 
-`image #img1 src=JCBMAPS~1~1~1314~115900932.jpg caption="Map of the southern part of South America, with east at the top. The map accompanies Alonso de Ovalle’s _Histórica Relación del Reyno de Chile_ of 1646." source=https://jcb.lunaimaging.com/luna/servlet/iiif/m/JCBMAPS~1~1~1314~115900932/manifest aspect=1.95`
+{% include embed/image.html id="img1" src="JCBMAPS~1~1~1314~115900932.jpg" caption="Map of the southern part of South America, with east at the top. The map accompanies Alonso de Ovalle’s _Histórica Relación del Reyno de Chile_ of 1646." source="https://jcb.lunaimaging.com/luna/servlet/iiif/m/JCBMAPS~1~1~1314~115900932/manifest" aspect="1.95" %}
 
 And Spain really needed cinnamon. One eighteenth-century report estimated that two-thirds of the Dutch cinnamon exports from Sri Lanka to Europe was consumed by Spain and its colonies.[^ref22] Cinnamon was used, for instance, as a flavoring in chocolate drinks, very popular in the Spanish Atlantic world.[^ref23] To supplement its supply, Spain embarked on another strategy of producing cinnamon, using other _Cinnamomum_ species from the East Indies. They created new plantations in the Philippines to cultivate local species including _[Cinnamomum burmanni](Q4115136)_ (Nees & T.Nees) Blume and _[Cinnamomum cebuense](Q5121027)_ Kosterm.[^ref24] The Spanish pharmacist and botanist [Juan de Cuéllar](Q6301228) went to great lengths to convince his superiors in Madrid that cinnamon from the Philippines was identical to cinnamon from Sri Lanka. This was not only a scholarly motivated opinion: there were important commercial interests at stake if Spanish cinnamon could be equated with the one produced by the Dutch.[^ref25]
 
-{% include embed/image.html src="wc:Cinnamomum_verum_vs_Cinnamomum_burmanni.jpg" caption="Cinnamon quills from Cinnamomum verum (left) and C. burmanni (right)." aspect="1.22" class="right" %}
+{% include embed/image.html src="wc:Cinnamomum_verum_vs_Cinnamomum_burmanni.jpg" caption="Cinnamon quills from Cinnamomum verum (left) and C. burmanni (right)." aspect="1.22" %}
 
 The last and most daring strategy was to transplant the true cinnamon to Spanish territories. This was an important objective for people like [Casimiro Gómez Ortega](Q957993), director of the [Royal Botanical Garden of Madrid](Q1794858) between 1771 and 1801, and [José Celestino Mutis](Q731937), the Spanish botanist who initiated the Royal [Botanical Expedition to New Granada](Q7373838) in 1783. Gómez Ortega published an instruction in 1779, which invited naturalists across the world to contribute plants and plant knowledge for the benefit of the Spanish empire, with cinnamon as one of the target species. Similarly, Mutis addressed the Spanish crown in the 1760s to support his plans for botanical expeditions in South America. New plant knowledge would greatly benefit the empire, he argued, explicitly mentioning cinnamon.[^ref26] However, Spain never succeeded in growing true cinnamon in South America, unlike the French efforts on [Guadeloupe](Q3118683) (1762) and the British on [Saint Vincent](Q379656) (1768).[^ref27]
 
-{% include embed/image.html src="wc:Cannelle_(Marché_de_la_Darse).jpg" caption="Cinnamon sticks for sale at the marché de la Darse, Pointe-à-Pitre, Guadeloupe." aspect="1.33" class="right" %}
+{% include embed/image.html src="wc:Cannelle_(Marché_de_la_Darse).jpg" caption="Cinnamon sticks for sale at the marché de la Darse, Pointe-à-Pitre, Guadeloupe." aspect="1.33" %}
 
 Today, Sri Lanka ranks high among [the world’s largest exporters of cinnamon.](http://www.worldstopexports.com/cinnamon-exporters/) But confusion remains: while _Cinnamomum verum_ J.Presl is grown in many countries in the tropical zone, the quality of the end product differs for each region.[^ref28] Moreover, commercial statistics usually bring all market variations under the rubric "cinnamon," without differentiating between different _Cinnamomum_ species. This issue is even more pertinent in the context of medicine. Cinnamon has great potential therapeutic applications, but many studies fail to clarify which species of _Cinnamomum_ they focused on, making it difficult to compare the results.[^ref29] The species epithet _verum_ may sound like an obsolete name in a globalized world, where everyone has access to cinnamon and where cinnamon is grown in many tropical areas. But it still captures the essence of what cinnamon has always been about: distinguishing between what is true and what is not.
 
-{% include embed/image.html src="cinnamon-production-chart.jpeg" caption="Cinnamon production (all species and varieties) by the top 5 cinnamon-producing countries, 1961–2019." aspect="1.33" class="right" %}
+{% include embed/image.html src="cinnamon-production-chart.jpeg" caption="Cinnamon production (all species and varieties) by the top 5 cinnamon-producing countries, 1961–2019." aspect="1.33" %}
 
 [^ref1]: Stephen G. Haw, "Cinnamon, Cassia and Ancient Trade," _Journal of Ancient History and Archaeology_ 4, no. 1 (2017): 5–18, [DOI:10.14795/j.v4i1.211](http://dx.doi.org/10.14795/j.v4i1.211). For an overview of the botanical genus _Cinnamomum_, see A.J.G.H. Kostermans, _A Monograph of the Genus Cinnamomum Schaeff. (Lauraceae)_ (Tokyo: Academia Scientific Book, 1986).
 
