--- a/_posts/2025-07-16-eggplant.md
+++ b/_posts/2025-07-16-eggplant.md
@@ -14,6 +14,7 @@ published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/eggplant
 image:
   path: Seikei_Zusetsu_cover.jpg
+auto_float: true
 ---
 
 
@@ -21,108 +22,108 @@ image:
 
 Originally designed by Japanese telecom companies, the [eggplant emoji](Q55267268) is part of the keyboard of icons that serve as the wordless shorthand of text messages and social media. The emoji is named Aubergine in Unicode, the universal standard for encoding linguistic and "picture" characters for electronic display. In 2010, the emoji keyboard was added to the Unicode Standard, and a year later, Apple made the keyboard accessible to iPhone users worldwide.[^ref1] When the eggplant emoji debuted in the United States and Canada, "Aubergine" was a relatively empty signifier ripe for a new association, one related to a topic of wireless conversation more routine than an Asian vegetable. Almost instantly, it became code for a phallus when, in 2011, the Twitter handle @iFUXXS_witHer tweeted "im jelly no 🍆 😥."[^ref2] Now, "sexting" or online foreplay is inseparable not with a banana 🍌 or an ear of corn 🌽 but with a long, bulbous purple fruit.
 
-{% include embed/image.html src="wc:Twemoji_1f346.svg" caption="Eggplant Emoji" aspect="1" class="right" %}
+{% include embed/image.html src="wc:Twemoji_1f346.svg" caption="Eggplant Emoji" aspect="1" %}
 
 For many North Americans, eggplant is almost as synonymous with a sex organ as it is with what’s for dinner. But generally, the fruit of this plant is known as a culinary vegetable, though it’s a berry since it contains edible seeds and develops from the ovary of a flower. Low in calories, but rich in nutrients including vitamins, minerals, protein, and fiber,[^ref3] eggplant has long been a dietary fixture throughout Asia and the Mediterranean, where cooks prize it for its versatility and ability to absorb flavors. World cuisine today abounds with dishes like eggplant parmesan _[(parmigiana di melanzane)](Q973455)_, South Asian puréed eggplant [(_baingan bharta_)](Q154872), Chinese Sichuan fish-fragrant eggplant (_yúxiāng qiézi_), Tanzanian eggplant curry (_mchuzi wa biringani_), and [Levantine](Q765174) classics like moussaka and baba ganoush. However, many Americans and Europeans find eggplant’s occasional bitterness and spongy texture challenging. This nightshade also bears the stigma of the [Solanaceae family](Q134172), known to harbor toxins, even though its New World counterparts—tomatoes, peppers, and potatoes—are mealtime standards.
 
-{% include embed/iframe.html src="https://wikimap.toolforge.org/?cat=Eggplant-based_food&subcats=true&subcatdepth=1&cluster=true" aspect="2.0" class="right" %}
+{% include embed/iframe.html src="https://wikimap.toolforge.org/?cat=Eggplant-based_food&subcats=true&subcatdepth=1&cluster=true" aspect="2.0" %}
 
 From its domestication in Asia to its worldwide diffusion, eggplant raises the question of why some foods become naturalized while others remain perennially foreign. The story of this curious fruit recalls a comparison made by the anthropologist Mary Douglas: "Like sex, the taking of food has a social component, as well as a biological one."[^ref4] Eggplant and its crosscultural reception prove that our relationships to food surpass physical sustenance. "Cuisine is not so much a matter of ingredients," explains the sociologist Claude Fischler, "as of classifications and rules ordering the world and giving it meaning."[^ref5] And by transforming the raw into the cooked, Fischler adds, we use cuisine "to tame the wild, threatening forces that inhabit nature."[^ref6] More than a source of calories and nutrients, eggplant carries meaningful baggage, and in its various representations, it’s a kaleidoscopic signifier. Comestible, medicinal, poisonous, narcotic, aesthetic, erotic, this spiny Solanum is rendered according to the degree to which it has been "tamed" to be good to think as well as to eat.
 
-{% include embed/image.html src="wc:MET_DP138232.jpg" aspect="1.35" class="right" %}
+{% include embed/image.html src="wc:MET_DP138232.jpg" aspect="1.35" %}
 
 # Local Names, Global Food
 
 In 1753, [Carl Linnaeus](Q1043) devised the scientific name [_Solanum melongena_](https://www.biodiversitylibrary.org/page/358205) for the common or Asian eggplant, following his game-changing system of [binomial nomenclature](Q36642), but the etymologies of its vernacular names outline a far messier cloverleaf of global exchange. Used by North Americans, the name _eggplant_ was coined centuries ago by the English, who now prefer the French word _aubergine_, which seems to be a corruption of the Arab _al-bāḏinjān_. Portuguese and Spanish speakers use the Arab-based names _berinjela_ and _berenjena_. Most of this Western alphabet soup is likely owed to the Indian word _baingãn_, even though India now uses _brinjal_, a corruption of the already corrupted Portuguese _berinjela_. While some African countries use _brinjal_, the region of the former Ethiopian Empire opts for _mälänzana_, based on _melanzana_ from Italy, where the plant was first known as _mala insana_ ("mad apple") due to its reputation as an exotic nightshade.
 
-{% include embed/image.html src="brinjal_Lydia_Rabkin.png" caption="Historical diffusion of words for eggplant" attribution="© Lydia Rabkin" description="Eggplant etymologies map" aspect="2.08" class="right" %}
+{% include embed/image.html src="brinjal_Lydia_Rabkin.png" caption="Historical diffusion of words for eggplant" attribution="© Lydia Rabkin" description="Eggplant etymologies map" aspect="2.08" %}
 
 As a quasi-vegetable that quickly oxidizes, is tricky to cook, and contains the toxic alkaloids solanine and nicotine, eggplant defies easy categorization, even "what is food and what is not," for those cultures who encountered it relatively late.[^ref7] Though exactly where this crop was domesticated and how it was distributed remain open questions, a [map of its current production](https://en.wikipedia.org/wiki/List_of_countries_by_eggplant_production) mirrors some of its journey across the globe. More than 80 percent of the world’s supply comes from China and India—where certain species have been consumed for 2,000–4,500 years—followed by Egypt, Turkey, and Indonesia.[^ref8] Over time, what was an ancient and storied plant in tropical Asia became richly appreciated throughout the rest of the continent. But when _mala insana_ reached Europe, its mystique aroused suspicion. Around the same time, the Columbian exchange introduced this "mad apple" to the Western Hemisphere, where it has faltered as everyday fare, but attracted other meanings with its aesthetic virtues.
 
-{% include embed/image.html src="wc:Countries_by_eggplant_production_in_2020.png" aspect="2.14" class="right" %}
+{% include embed/image.html src="wc:Countries_by_eggplant_production_in_2020.png" aspect="2.14" %}
 
 # An Age-Old Affinity: Eggplant in Asia
 
 Assumptions that eggplant was domesticated in the Indian subcontinent rest partly on Sanskrit documents written more than two millennia ago.[^ref9] Practitioners of [Ayurveda](Q132325), a system of classical Indian medicine, made some of the earliest records of eggplant and documented its wild relatives, species still in pharmacopeias today.[^ref10] The _[Kama Sutra](Q47228)_ (Principles of Love) also mentions eggplant, proving that its erotic entanglements are not new. This 2,000-year-old self-help guide recommends rubbing the male member with eggplant to produce "a swelling lasting for one month."[^ref11] The ubiquity of this plant in Indian cuisine and medicine make it one of the few Solanums that the naturalist [Robert Wight](Q1375864) judges innocuous in his _Illustrations of Indian Botany_ from the mid-1800s.[^ref12] A product of the modern frenzy for not only studying plants as potential resources, but also picturing them in a mode of knowledge capture that Enlightenment taxonomists considered superior to written description, Wight’s project splices Linnaean classification with Indian decorative and devotional art, care of local illustrators, to present _S. melongena_ stripped of context and dissected, but animated by the same stylization and vibrancy found on a wall hanging or bedcover in an Indian home.[^ref13]
 
-{% include embed/image.html src="10415784.jpg" caption="Robert Wight, Illustrations of Indian botany (1840-1850)" attribution="Missouri Botanical Garden, Peter H. Raven Library" description="Illustrations of Indian botany, or figures illustrative of each of the natural orders of Indian plants, described in the author’s Prodromus florae peninsulae Indiae orientalis" license="Public domain" source="https://www.biodiversitylibrary.org/pageIMAGE/10415784" aspect="0.68" class="right" %}
-{% include embed/image.html src="mid_01032763_001.jpg" caption="Company School watercolor painting, Calcutta (19th century)" attribution="© The Trustees of the British Museum" description="Watercolor painting on paper" source="https://media.britishmuseum.org/media/Repository/Documents/2014_10/17_10/26991ccc_7559_460b_ad27_a3c700aa9665/mid_01032763_001.jpg" aspect="0.72" class="right" %}
-{% include embed/image.html src="V0044992.jpg" caption="Kalighat watercolor painting, West Bengal (19th century)" attribution="Wellcome Collection" description="A woman pulling giant aubergines from a tree" license="Public domain" source="https://iiif.wellcomecollection.org/image/V0044992/full/640%2C/0/default.jpg" aspect="0.64" class="right" %}
+{% include embed/image.html src="10415784.jpg" caption="Robert Wight, Illustrations of Indian botany (1840-1850)" attribution="Missouri Botanical Garden, Peter H. Raven Library" description="Illustrations of Indian botany, or figures illustrative of each of the natural orders of Indian plants, described in the author’s Prodromus florae peninsulae Indiae orientalis" license="Public domain" source="https://www.biodiversitylibrary.org/pageIMAGE/10415784" aspect="0.68" %}
+{% include embed/image.html src="mid_01032763_001.jpg" caption="Company School watercolor painting, Calcutta (19th century)" attribution="© The Trustees of the British Museum" description="Watercolor painting on paper" source="https://media.britishmuseum.org/media/Repository/Documents/2014_10/17_10/26991ccc_7559_460b_ad27_a3c700aa9665/mid_01032763_001.jpg" aspect="0.72" %}
+{% include embed/image.html src="V0044992.jpg" caption="Kalighat watercolor painting, West Bengal (19th century)" attribution="Wellcome Collection" description="A woman pulling giant aubergines from a tree" license="Public domain" source="https://iiif.wellcomecollection.org/image/V0044992/full/640%2C/0/default.jpg" aspect="0.64" %}
 
 Art and literature also attest to a long human relationship with eggplant in China, where it was cultivated no later than 59 BCE, when the poet [Wang Bao](Q2119204) produced the first known Chinese record of this plant.[^ref14] Ancient writings reveal how Chinese farmers bred eggplants to be larger, longer, sweeter, and less bitter and spiny. A sixth-century text states that the fruits were pellet-sized, but 600 years later, they are reported to be the size of teacups.[^ref15] The [earliest known Chinese illustration of eggplant](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2712397/figure/MCN179F2/) appears in a [materia medica](Q1291275) written in 1069 CE, showing that the fruits used to be rounder.[^ref16] Around 200 years later, another such text includes [a vividly painted eggplant](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2712397/figure/MCN179F3/) that more resembles the teardrop-shaped fruits of today.[^ref17] Written in 1330 when China was under Mongol rule, _Yinshan Zhengyao_ (Dietary Principles) lists recipes featuring eggplant, a common ingredient in Mongolian cookery with its Central and West Asian influences, but the author regards as "slightly poisonous" the Chinese variety, which reportedly "moves wind and produces sores and even obstinate illnesses."[^ref18]
 
-{% include embed/image.html src="Yinshan.jpg" caption="Hu Sihui, dietary manual Yinshan Zhengyao (1330)" attribution="Shuge.org" description="Chapter 3, Folio 49B" license="Public domain" aspect="0.75" class="right" %}
-{% include embed/image.html src="MingDynasty_Eggplant.jpg" caption="Unknown artist, 蔬果圖 (Shu guo tu, or Painting of vegetables and fruit) (1368-1644)" attribution="© The Trustees of the British Museum" description="Ming Dynasty painting, ink and colours on silk" aspect="0.96" class="right" %}
+{% include embed/image.html src="Yinshan.jpg" caption="Hu Sihui, dietary manual Yinshan Zhengyao (1330)" attribution="Shuge.org" description="Chapter 3, Folio 49B" license="Public domain" aspect="0.75" %}
+{% include embed/image.html src="MingDynasty_Eggplant.jpg" caption="Unknown artist, 蔬果圖 (Shu guo tu, or Painting of vegetables and fruit) (1368-1644)" attribution="© The Trustees of the British Museum" description="Ming Dynasty painting, ink and colours on silk" aspect="0.96" %}
 
 Cultural clues mark the path of eggplant from China to the fields and kitchens of its eastern and southern neighbors. The fruit of a spiny variety weigh down a still-life painting by the artist [Shin Saimdang (1504–1551),](Q464485) a Korean aristocrat who worked in the genre of _Chochungdo_ ("insects on flowers") characterized by careful study of local flora and fauna.[^ref19] Eggplant also weaved its way into the noble pursuits of Southeast Asia. A bottom-heavy fruit inspired the shape of a sixteenth-century Vietnamese [water dropper,](https://www.britishmuseum.org/collection/object/A_2001-1129-5_1) used in the art of calligraphy. By the eighth century, eggplant had crossed the Sea of Japan and begun insinuating itself into Japanese cuisine and culture.[^ref20] A sumptuous print in the agricultural catalog _[Seikei Zusetsu](Q76160295)_ (1793–ca. 1804) depicts _S. melongena_ in a hybrid style, the result of cultural exchange with Europe.[^ref21] During the Japanese new year, eggplant becomes (meta)physical fare. _[Hatsuyume](Q1588971)_ refers to the first dream that someone has after December 31, and if they dream of Mount Fuji, a hawk, and eggplant, it means good fortune ahead.[^ref22] 
 
-{% include embed/image.html src="wc:Chochungdo_02.jpg" aspect="0.86" class="right" %}
-{% include embed/image.html src="Seikei Zusetsu.jpg" caption="So Senshun, Shirao Kunihashira, Mukai Tomoaki, Hori Monjuro, Seikei Zusetsu (1793–1804)" attribution="Leiden University Libraries Digital Collections" description="Ser. 1042 vol. 26, page 027" license="CC BY-SA 4.0" aspect="1.30" class="right" %}
-{% include embed/image.html src="Hatsuyume.jpg" caption="Utagawa Toyokuni, Memorial portrait of Konno of Eijudo Press at the age of 71 (1797-1798)" attribution="© The Trustees of the British Museum" description="Woodblock print, shini-e, nishiki-e on paper" license="CC BY-SA 4.0" aspect="0.67" class="right" %}
+{% include embed/image.html src="wc:Chochungdo_02.jpg" aspect="0.86" %}
+{% include embed/image.html src="Seikei Zusetsu.jpg" caption="So Senshun, Shirao Kunihashira, Mukai Tomoaki, Hori Monjuro, Seikei Zusetsu (1793–1804)" attribution="Leiden University Libraries Digital Collections" description="Ser. 1042 vol. 26, page 027" license="CC BY-SA 4.0" aspect="1.30" %}
+{% include embed/image.html src="Hatsuyume.jpg" caption="Utagawa Toyokuni, Memorial portrait of Konno of Eijudo Press at the age of 71 (1797-1798)" attribution="© The Trustees of the British Museum" description="Woodblock print, shini-e, nishiki-e on paper" license="CC BY-SA 4.0" aspect="0.67" %}
 
 Eggplant traveled light, leaving much of its cultural meaning behind and acquiring new significance among West Asians. Persia’s botanical repertoire incorporated eggplant or _bādenjān_ just before the Islamic Golden Age, which ran from the eighth to the thirteenth century, during which the Persian polymath [Avicenna](Q8011) documented its medicinal uses. Eggplant quickly became a luxury dish for the Islamic elite, as told by stories of a glorious, month-long feast for the wedding of a ninth-century Abbasid caliph, [al-Maʾmun](Q61056) of Baghdad, and his vizier’s daughter, Būrān. This culinary lore was passed down as derivative eggplant dishes like _baadhinjaan buran_ ("Būrān’s eggplant"), _[borani](Q893318)_, or [_buraniyyah_](https://archive.aramcoworld.com/issue/200604/cooking.with.the.caliphs.htm). In the eleventh century, Ibn Buṭlān of Baghdad featured eggplant in the medical treatise _[Taqwim al-Sihhah](Q608662)_ (The Maintenance of Health)—later translated into Latin and illustrated by Italian artists, who portrayed the nightshade as a potent aphrodisiac. Networks of trade and conquest eventually brought eggplant to the Mediterranean. A tenth-century calendar from Córdoba mentions six eggplant varieties, including one specific to this Spanish region, which might have been a claim to a unique Cordoban culture made by the city’s [rebel caliphate](Q190418).[^ref23]
 
-{% include embed/image.html src="wc:Muhammad_ibn_Muhammad_Shakir_Ruzmah-'i_Nathani_-_An_Eggplant,_a_Plant_Called_Parsiyavushan,_and_Dungwort_-_Walters_W659225B_-_Full_Page.jpg" aspect="0.66" class="right" %}
-{% include embed/image.html src="IBN_BUTL%C3%82N_Tacuinum_sanitatis__btv1b105072169_55.jpeg" caption="Ibn Buṭlān, Tacuinum sanitatis (11th century)" attribution="Bibliothèque nationale de France" description="Tacuinum sanitatis, Folio 21r, Latin 9333" license="CC BY 2.0." region="0,49,1024,943" aspect="0.67" class="right" %}
+{% include embed/image.html src="wc:Muhammad_ibn_Muhammad_Shakir_Ruzmah-'i_Nathani_-_An_Eggplant,_a_Plant_Called_Parsiyavushan,_and_Dungwort_-_Walters_W659225B_-_Full_Page.jpg" aspect="0.66" %}
+{% include embed/image.html src="IBN_BUTL%C3%82N_Tacuinum_sanitatis__btv1b105072169_55.jpeg" caption="Ibn Buṭlān, Tacuinum sanitatis (11th century)" attribution="Bibliothèque nationale de France" description="Tacuinum sanitatis, Folio 21r, Latin 9333" license="CC BY 2.0." region="0,49,1024,943" aspect="0.67" %}
 
 # European Herbals: Secondhand and Thirdhand Encounters
 
 Via trade routes connecting Italy and Iberia with the world beyond the Mediterranean, eggplant arrived in early Renaissance Europe, where it was received with a level of concern for public safety and morality. In sixteenth-century Italy, the doctor [Pietro Andrea Mattioli](Q457191) wrote in his [_Senensis medici_](https://www.biodiversitylibrary.org/page/40601901) that eggplant was "generally eaten cooked with oil, salt, pepper and mushrooms," adding that "some of our people…feed on the mad-apple in order to arouse love."[^ref24] He also warned that eggplant created digestive illnesses and long-lasting health issues. The New World tomato and the mythical "pomo d’oro" (golden apple) were often conflated as varieties of _melanzana_. This confusion might explain why gold was applied to a print of eggplant in a copy of the [_Hortus Eystettensis_](https://bibdigital.rjb.csic.es/records/item/10908-redirection) by [Basilius Besler](Q65027) who cited Mattioli. Also in the 1500s, [Leonhart Fuchs](Q60756) a German botanist who created the University of Tübingen’s first medicinal garden, described eggplant as "sown in our gardens," but noted Europeans’ suspicion of it, writing that some "avoid the use of them, terrified by the name [_mala insana_] itself."[^ref25] 
 
-{% include embed/image.html src="Besler_2023.jpg" caption="Basilius Besler, Hortus Eystettensis (1613)" attribution="Oak Spring Garden Foundation" description="Eggplant illustrated in Besler’s Hortus Eystettensis" license="Public domain" aspect="0.77" class="right" %}
+{% include embed/image.html src="Besler_2023.jpg" caption="Basilius Besler, Hortus Eystettensis (1613)" attribution="Oak Spring Garden Foundation" description="Eggplant illustrated in Besler’s Hortus Eystettensis" license="Public domain" aspect="0.77" %}
 
 Islamic and Jewish communities played a large part in introducing other Europeans to Asian food cultures. An association with Islamic culture made Italians suspicious of the eggplant, and similarly, its Spanish and Italian ties, along with a general wariness of nightshades, made the plant seem suspect to gardeners on the British Isles. Culinary prejudice and aesthetic admiration predominate in herbals by English authors, who were more culturally removed from eggplant than their southern counterparts and thus highly doubtful of this exotic. In 1597, the botanist [John Gerard](Q1333338) wrote that in London he saw eggplant "the bigness of a goose egg," but recommended that the English should "content themselves with the meat and sauce of our own country," because "these apples have a mischievous quality, the use whereof is utterly to be forsaken."[^ref26] Much of Gerard’s advice was copied by [Philip Miller](Q312678) in his _Gardeners Dictionary_ of 1754, which contends that "these plants are only preserved as curiosities in the English gardens" and eaten only by "some Italians or Spaniards."[^2ref7]
 
 <!-- Timeline JS spreadsheet data not available
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zcOYBQF5jzSgZn93F-0MYoCtBRSdizmMiNTH9r_kGy0&timenav-position=bottom&hash-bookmark=false&initial-zoom=2&height=500" class="right" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1zcOYBQF5jzSgZn93F-0MYoCtBRSdizmMiNTH9r_kGy0&timenav-position=bottom&hash-bookmark=false&initial-zoom=2" %}
 -->
 
 While herbalists in England and Germany warned their readers away from eggplant, the _[Hortus Malabaricus](Q5907004)_, compiled by Dutch colonists and published from 1678 to 1693, took a more open view. This record of the plants of "Malabar" (modern-day Kerala) derived its information from locals, and much of its contents are attributed to the distinguished Indian herbalist [Itty Achudan](Q6095079).[^ref28] The _Hortus Malabaricus_ lists the Braman name for eggplant, "vaenna," noting its use for curing toothaches and treating cows with internal abscesses. The Dutch overseer of this project, [Hendrik van Rheede](Q741104), laments that "the fruit of the nightshade in our homeland is a narcotic power: but India produces edible nightshades!"[^ref29] In such cross-cultural encounters, Europeans demonstrated a willingness to incorporate local plants into their herbal understanding while dreaming of potential profit and botanical innovation.
 
-{% include embed/image.html src="Hortus_Malabaricus_Volume_10_0163.jpg" caption="Hendrik van Reede tot Drakestein, Hortus Malabaricus (1678-1703)" aspect="1.16" class="right" %}
+{% include embed/image.html src="Hortus_Malabaricus_Volume_10_0163.jpg" caption="Hendrik van Reede tot Drakestein, Hortus Malabaricus (1678-1703)" aspect="1.16" %}
 
 # Eggplant in the Renaissance: Between Art and Natural History
 
 Like the eggplant emoji, the shape and color of _mala insana_ also stirred the imagination, if not the appetite, of European Renaissance and Baroque artists, who tended to lace fruit and vegetables with sexual innuendo. Reproductive organs might have first been subbed for _S. melongena_ in Rome at the [Villa Farnesina](Q1126723), where a series of frescoes depicts a total of 21 eggplants.[^ref30] In 1517 and 1518, the artist Raphael decorated the villa’s loggia with scenes featuring Cupid and Psyche. Surrounding his frescoes are [festoons by Giovanni da Udine,](img1/zoomto/1406,70,728,670) who packed his paintings with garden produce. One arrangement includes a fig penetrated by a [phallic bottle gourd](img1/zoomto/1841,176,293,270) equipped with a pair of eggplants for testicles. Behind such visual ribaldry was the more sober "doctrine of signatures," according to which similar-looking objects or organisms share an essence.[^ref31] An example of such thinking is eating walnuts to boost mental power because these large seeds look like brains.
 
-`image #img1 src=wc:Le_concile_des_Dieux_dans_la_loggia_d'Amour_et_de_Psyché_(Villa_Farnesina,_Rome)_(33898412830).jpg aspect=1.78`
+{% include embed/image.html id="img1" src="wc:Le_concile_des_Dieux_dans_la_loggia_d'Amour_et_de_Psyché_(Villa_Farnesina,_Rome)_(33898412830).jpg" aspect="1.78" %}
 
 Many Renaissance murals juxtapose plants and animals with figures of classical mythology,[^ref32] forming menageries that convey how sixteenth-century art partnered with botanical study.[^ref33] The Italian painter [Giuseppe Arcimboldo](Q7751) made studies of plants while serving the Austrian Habsburg family. Arcimboldo worked in an "avant-garde atmosphere," which included a _Kunstkammer_ (cabinet of curiosities), a zoo, and parties for which the court dressed as the elements and seasons, following his designs.[^ref34] The court artist also painted striking portraits with scientific fluency. _Zomer_ (1563) assembles an allegory for "Summer" with fruits and vegetables including a [club-shaped eggplant](img2/zoomto/549,1189,2196,1745) and a [white eggplant](img2/zoomto/1336,2149,1935,1673), cereals, foliage, and flowers—all recognizable from a botanical standpoint. In _Vertumnus_ (c. 1590), Emperor Rudolf II appears as the Roman god of the seasons and vegetal growth. An eggplant helps form his neck, defying the late medieval notion that tree fruit was a luxury reserved for nobility, while "low" vegetables grown under or near the soil were for peasants.[^ref35] More than visual puns, these portraits symbolize "the copiousness of creation and the power of the ruling family over everything,"[^ref36] as well as the era’s anthropocentrism which regarded man as the sum of all creation.[^ref37]  
 
-{% include embed/image.html src="wc:Giuseppe_Arcimboldo_-_Summer_-_Google_Art_Project.jpg" aspect="0.76" class="right" %}
-{% include embed/image.html src="wc:Vertumnus_årstidernas_gud_målad_av_Giuseppe_Arcimboldo_1591_-_Skoklosters_slott_-_91503.tiff" aspect="0.81" class="right" %}
+{% include embed/image.html src="wc:Giuseppe_Arcimboldo_-_Summer_-_Google_Art_Project.jpg" aspect="0.76" %}
+{% include embed/image.html src="wc:Vertumnus_årstidernas_gud_målad_av_Giuseppe_Arcimboldo_1591_-_Skoklosters_slott_-_91503.tiff" aspect="0.81" %}
 
 # Atlantic Encounters: The Expanding (Agri)cultures of Eggplant 
 
 While Iberians probably introduced _S. melongena_ to the Americas in the early years of conquest and colonization, enslaved Africans conveyed their own cultivars, including the scarlet-colored guinea squash ([_S. aethiopicum_ L.](https://worldcrops.org/crops/garden-egg)) and the crunchy Gboma eggplant [(_S. macrocarpon_ L.)](Q7479565), as the Dutch physician and naturalist [Willem Piso](Q1385325) chronicled in his 1648 compendium of Brazilian flora, the [_Historia naturalis Brasiliae_](https://pt.wikipedia.org/wiki/Historia_Naturalis_Brasiliae). Enslaved laborers crossed the Atlantic bearing not only the clothes on their backs, but also their food staples, including African eggplant, sesame, okra, [watermelon](https://lab.plant-humanities.org/watermelon/), millet, sorghum, and [black-eyed peas](https://lab.plant-humanities.org/black_eyed_peas/), and the knowledge and skills to grow them. To gain some measure of security, autonomy, and "acknowledgment that not all of one’s labor was owned by the master," some enslaved workers cultivated "food fields" that allowed restricted access to land.[^ref38] However, after the colonial period, the guinea squash and gboma were among the African indigenous vegetables of tropical America to be lost or much less frequently consumed.[^ref39]
 
-{% include embed/image.html manifest="https://www.biodiversitylibrary.org/pageIMAGE/289117" caption="Willem Piso, Historia naturalis Brasiliae (1648)" attribution="Peter H. Raven Library, Missouri Botanical Garden" description="Belingela or guinea squash" license="Public domain" region="722,1960,2954,2718" aspect="0.67" class="right" %}
+{% include embed/image.html manifest="https://www.biodiversitylibrary.org/pageIMAGE/289117" caption="Willem Piso, Historia naturalis Brasiliae (1648)" attribution="Peter H. Raven Library, Missouri Botanical Garden" description="Belingela or guinea squash" license="Public domain" region="722,1960,2954,2718" aspect="0.67" %}
 
 While Southerners in the United States incorporated "foods that spread from the black hearthside to general consumption," Northerners were slower to accept eggplant.[^ref40] A pamphlet published in 1891 states that "some of the neglect of the egg plant is due to the fact that cooks are not familiar with it" and suggests the tried and true "fried," "baked," and "fritters."[^ref41] The regular appearance of eggplant in growing guides and seed catalogs in the late 1800s and early 1900s seems to indicate that more North Americans were adding it to their diets. In the competitive spirit of modern agriculture, Adolph Kruhm’s 1918 _Home vegetable gardening from A to Z_ showcases the girth of the Black Beauty variety with a measuring tape. However, since seed catalogs are as an exhaustive account of horticultural creation as one of Arcimboldo’s allegorical portraits, the marketing of a cornucopia of eggplant varieties might not indicate an actual major uptick in consumption. But for growers looking for crops that can withstand the hottest months in the upper end of the [USDA’s plant hardiness zones](https://planthardiness.ars.usda.gov/), Kruhm’s growing tip for eggplant still stands: "Cool nights do not agree with this child of the tropics."[^ref42]
 
-{% include embed/image.html manifest="https://www.biodiversitylibrary.org/pageImage/50118220" caption="Adolph Kruhm, Home vegetable gardening from A to Z (1918)" attribution="University of California Libraries" description="Black beauty Egg plant, the finest sort for home use" license="Public domain" aspect="0.6" class="right" %}
-{% include embed/image.html manifest="seedbox_oaksprings.jpg caption=Shaker’s" attribution="Oak Spring Garden Foundation" description="Shaker’s genuine vegetable and flowers seeds from Mount Lebanon, Columbia County" license="Public domain" aspect="1" class="right" %}
+{% include embed/image.html manifest="https://www.biodiversitylibrary.org/pageImage/50118220" caption="Adolph Kruhm, Home vegetable gardening from A to Z (1918)" attribution="University of California Libraries" description="Black beauty Egg plant, the finest sort for home use" license="Public domain" aspect="0.6" %}
+{% include embed/image.html manifest="seedbox_oaksprings.jpg caption=Shaker’s" attribution="Oak Spring Garden Foundation" description="Shaker’s genuine vegetable and flowers seeds from Mount Lebanon, Columbia County" license="Public domain" aspect="1" %}
 
 Dozens of eggplant varieties and cultivars are grown today,[^ref43] as this genus hybridizes easily, with or without human help.[^ref44] Horticulturists, gardeners, and cooks get excited when discussing the various cultivars. The creamy flesh of the Japanese Pickling, for example, is described as tasting mellow and sweet. Cultivar names also reveal the fertile imagination of their growers: the Fairy Tale which has violet skin with white stripes, the prolific Little Fingers which grows in clusters of 20 fruits or more, the Black Beauty which recalls Anna Sewell’s famous horse, and the hybrid Ichiban meaning "best" in Japanese. The ornamental attributes of eggplants like the white and purple Italian Rosa Bianca or the tiny watermelon-like Thai eggplant are admired almost as much as for their flavor. And while the ubiquitous eggplant emoji is solid purple, the fruits can be white, red, yellow, green, reddish-purple, light purple, dark purple, black, striped, or marbled.
 
-{% include embed/image.html src="cultivars3.jpg" caption="Eggplant varieties and cultivars" attribution="Ana Carmona-Ribeiro" description="Photo montage of 16 different eggplant cultivars" license="CC BY-SA 4.0" aspect="1" class="right" %}
+{% include embed/image.html src="cultivars3.jpg" caption="Eggplant varieties and cultivars" attribution="Ana Carmona-Ribeiro" description="Photo montage of 16 different eggplant cultivars" license="CC BY-SA 4.0" aspect="1" %}
 
 # Aesthetic Virtues: Eggplant in Modern Art
 
 As _S. melongena_ settled into Western culture, its aesthetic and exotic qualities drew the attention of European and North American artists. Eggplant became an artistic subject, demonstrating how art and food are related even in highly industrialized and urbanized societies. Representations surfaced in the applied arts, such as an eggplant-shaped [Majolica ceramic teapot](http://majolicasociety.com/majolica-history/) or a leaded glass screen made by Tiffany & Co., for a transom window using a typical [Art Nouveau](Q34636) design that depicts the plant with deep black fruit and multicolored leaves. In Henri Matisse’s [_Still Life with Aubergines_ (1911)](https://www.museedegrenoble.fr/oeuvre/1581/1922-interieur-aux-aubergines.htm), three eggplants represent more than culinary ingredients. "Balanced precariously on a table whose red cloth carries an undulating white pattern that reinforces their tuberous shape,"[^ref45] they are the visual starting point of a decorative explosion of textures and colors throughout the interior and beyond. In this picture, Matisse converts his studio into a space permeated by one of his fundamental themes, _joie de vivre_ ("the joy of life"). In this personal recreation of paradise, eggplant, without losing its domestic character, is reconnected to its "remote" Asian origins.
 
-{% include embed/image.html src="majolica_teapot.jpg" caption="Portuguese Majolica teapot (20th century)" attribution="Karmason-Stacke Graham Library" description="Eggplant shaped ceramic teapot" license="© Majolica International Society" aspect="1.77" class="right" %}
-{% include embed/image.html src="eggplant.jpg" caption="Louis C. Tiffany and Company, Leaded glass transom (c. 1879–81)" attribution="The Charles Hosmer Morse Museum of American Art, Winter Park, Florida" description="Transom at the George Kemp house, NY" license="© The Charles Hosmer Morse Foundation, Inc." aspect="1.49" class="right" %}
+{% include embed/image.html src="majolica_teapot.jpg" caption="Portuguese Majolica teapot (20th century)" attribution="Karmason-Stacke Graham Library" description="Eggplant shaped ceramic teapot" license="© Majolica International Society" aspect="1.77" %}
+{% include embed/image.html src="eggplant.jpg" caption="Louis C. Tiffany and Company, Leaded glass transom (c. 1879–81)" attribution="The Charles Hosmer Morse Museum of American Art, Winter Park, Florida" description="Transom at the George Kemp house, NY" license="© The Charles Hosmer Morse Foundation, Inc." aspect="1.49" %}
 
 Decades later, the formal properties of the fruit became a subject of photography. With a highly refined sense of composition and light, [Edward Weston](Q346988) photographed a dark globular eggplant, the same cultivar featured in agricultural literature at the time. _Eggplant_ (1930) unveils the unexpected and the marvelous in an everyday object, as well as its resemblance to the human body.[^ref46] Although the dietary significance of the eggplant is still present, its glossy exterior and bulbous shape awaken an aesthetic appreciation and the urge to touch the fruit and feel its smooth skin and firm flesh. Appeals to visual and tactile sense are more pronounced in the work of [Robert Mapplethorpe](Q312786), who derived his creative use of light and formal experimentation from Weston.[^ref47] Eroticism defines Mapplethorpe’s portraits of women, men, flowers, and fruit. [_Eggplant_ (1985)](https://static.artmuseum.princeton.edu/mirador3/?manifest=https://data.artmuseum.princeton.edu/iiif/objects/37236&canvas=https://data.artmuseum.princeton.edu/iiif/objects/37236/canvas/37236-canvas-122768) isolates a single fruit in an unidentified space, whose neutrality is broken by banded light filtered through window blinds. Marked by sun and shade, the meaty eggplant seems to transform into a body or part of one. Its nutritional meaning minimized, it can only be consumed as an object of lust in yet another example of its sexualization, and perhaps, its commodification. The fruit’s curves and crevices stretch the imagination and resemble the torso that fills [_Thomas (Back)_ (1986)](https://www.getty.edu/art/collection/object/10A10R), a study of an African-American male model whom Mapplethorpe favored and posed in a similar studio setting.
 
-{% include embed/image.html src="weston_eggplant.jpg" caption="Edward Weston, Eggplant (1929)" attribution="© Center for Creative Photography, Arizona Board of Regents" description="Gelatin silver print" aspect="1.29" class="right" %}
+{% include embed/image.html src="weston_eggplant.jpg" caption="Edward Weston, Eggplant (1929)" attribution="© Center for Creative Photography, Arizona Board of Regents" description="Gelatin silver print" aspect="1.29" %}
 
 # New Varieties, Old Issues: Bt Brinjal and Globalization
 
 Foods can be naturalized into a culinary repertoire, but they can also become culturally estranged. In recent years, eggplant has been the center of one of the hardest fought debates over genetically engineered crops. In 2000, the India-based company Mahyco used a gene developed by the agrochemical giant Monsanto to design pest-resistant eggplant varieties known as [Bt brinjal](Q4982032). Although these varieties are cultivated in Bangladesh, they have been banned in India. Concerned about food and environmental safety, farmers, activists, and researchers accuse corporate entities like Mahyco Monsanto Biotech of bio-imperialist efforts to extract maximum profits under an humanitarian guise,[^ref48] while other farmers have protested India’s moratorium by illegally planting Bt brinjal.[^ref49] Plants have cultural meaning and are woven into complex sociopolitical relationships that bring together issues such as food sovereignty, intellectual property rights, and the power of profiteering corporations. As a global food, eggplant continues to be entwined in human culture, and now, it’s squarely located in international debates with far-reaching implications. 
 
-{% include embed/image.html src="wc:BT_Brinjal_Protest_Bangalore_India.JPG" aspect="1.33" class="right" %}
+{% include embed/image.html src="wc:BT_Brinjal_Protest_Bangalore_India.JPG" aspect="1.33" %}
 
 [^ref1]: Benjamin Zimmer, Jane Solomon, and Charles E. Carson, "Among the New Words," _American Speech_ 91, no. 2 (May 1, 2016): 203. https://doi.org/10.1215/00031283-3633118.
 [^ref2]: Zimmer, Solomon, and Carson, 223–24.
