--- a/_posts/2025-07-16-okra.md
+++ b/_posts/2025-07-16-okra.md
@@ -11,9 +11,11 @@ thumbnail: okra.jpg
 permalink: /okra
 tags: vegetable tropical heat-tolerant
 published: true
+featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/okra
 image:
   path: wc:Okra_%28Abelmoschus_esculentus%29_%283%29.jpg
+auto_float: true
 ---
 
 
@@ -21,71 +23,71 @@ image:
 
 Delta State University (DSU) in Mississippi has an unusual mascot: the "Fighting Okra." While the school's mascot was the "Statesman," students insisted on a mascot that they thought better represented their southern roots and the toughness of their athletes.[^1] Today, DSU has proudly made the Fighting Okra the face of its campus, with promotional materials proclaiming somewhat tongue in cheek, "Fear of the okra may not be actual fear, but it’s enough to get a crowd going."[^2] Although the connection between okra, the South, and toughness may seem obscure,  okra has been a source and symbol of strength for many disenfranchised communities, as well as for members of the African diaspora in the Americas. The vegetable has developed a reputation as a "robust, productive, fast-growing, [and] high yielding [crop]... [one that is] seldom felled by pests and diseases. It adapts to difficult conditions and can thrive where other food plants prove unreliable."[^3] More broadly, it has served as an example of and testament to cultural resilience, as Africans forcibly displaced by the slave trade kept growing and cooking okra and preserving, as well as innovating, their culinary traditions. Thus, the crop has evolved into a cultural phenomenon that communities around the world continue to embrace as a treasured reminder of home, heritage, and enduring spirit.
 
-{% include embed/youtube.html id="pS589zKAlnY" caption="The Fighting Okra" aspect="1.6" class="right" %}
+{% include embed/youtube.html vid="pS589zKAlnY" caption="The Fighting Okra" aspect="1.55" %}
 
 # Origins
 
 Okra, from the Nigerian [Igbo](https://en.wikipedia.org/wiki/Igbo_language) okuru (its Latin name is *Abelmoschus esculentus*), is a [cultigen](https://en.wikipedia.org/wiki/Cultigen) or plant species that humans have selected for cultivation with no clearly discernible wild ancestor.[^4] It hails from the Mallow family, sharing ties with plants such as cotton and members of the hibiscus genus.[^5] In terms of floral anatomy, okra closely resembles various hibiscus species and in early botanical texts was often mistaken as a type of hibiscus. The plant rises from the ground and branches into green leaves and pale yellow and red flowers, complemented by long green or red fruit pods containing the seeds. Its original zone of cultivation is in the tropics and subtropics of the eastern hemisphere, extending from Southeast Asia to West Africa. In terms of its precise origins, scientists have theorized it to be the descendant of an older species originating in either East Africa or South and Southeast Asia. Author, seed saver, and permaculturist Chris Smith suggests that the Asian origin story is the more likely, as in prehistory, the wild relative of okra, to which its East African origin is often attributed, also grew in adjacent regions of Asia.[^6] That said, African communities extending from the Horn of Africa to the shores of West Africa have cultivated the plant for thousands of years. From Africa, we can trace okra’s journey from prehistoric cultivation to an international symbol of African diasporic survival and cultural continuity. 
 
-{% include embed/image.html src="profdrthomsflora03thom_0644.jpg" caption="Flora von Deutschland" description="Botanical illustration from Thomé's Natural History" license="CC BY-SA 4.0" aspect="0.65" class="right" %}
+{% include embed/image.html src="profdrthomsflora03thom_0644.jpg" caption="Flora von Deutschland" description="Botanical illustration from Thomé's Natural History" license="CC BY-SA 4.0" aspect="0.65" %}
 
 # Crossing Borders
 
 Okra's historical basis in Africa begins with its first appearance in the written record in [Ibn al-Baytar](https://en.wikipedia.org/wiki/Ibn_al-Baytar)’s 1216 pharmaceutical text _Kitab al-Jamiʿ li-Mufradat al-Adwiya wa-l-Aghdhiya_. Al-Baytar, a physician, botanist, and pharmacist, compiled a catalog of 1,400 plants that included information about their characteristics and their traditional uses. For okra, called bamiya, Al-Baytar referenced the words of his teacher, Abu al-Abbas al-Nabati, who encountered the vegetable on a visit to Egypt in 1216 CE.[^7] Al-Nabati compared the plant and its "black" and "sweet" fruit to hibiscus trees in [Al-Andalus](https://en.wikipedia.org/wiki/Al-Andalus). This comparison was particularly inspired by the red center that both flowers share, as well as the shape and form of the flowers themselves. The okra description ends with a culinary emphasis, describing how "the people of Egypt'' ate and prepared bamiya with meat and "hot spices."[^8] Today, in a comparable dish also called [bamiya](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Du_bamia_avec_du_riz_en_f%C3%A9vrier_2022.jpg/800px-Du_bamia_avec_du_riz_en_f%C3%A9vrier_2022.jpg?20220301125847) in Egypt and Western Asia, or ganaouiya in Northwest Africa,  cooks continue to pair the vegetable with protein in a slow-cooked and spiced stew. 
 
-{% include embed/image.html src="1_20210320_20210320_0857_0111.jpg" caption=" الجامع لمفردات الأدوية والأغدية إبن البيطار, كتب طبية طب بديل" aspect="0.66" class="right" %}
+{% include embed/image.html src="1_20210320_20210320_0857_0111.jpg" caption=" الجامع لمفردات الأدوية والأغدية إبن البيطار, كتب طبية طب بديل" aspect="0.66" %}
 
 Okra’s journey from Africa to the Americas began in the decades following Columbus’s 1492 arrival in the Americas and the subsequent establishment of European colonies. From that period onward, European traders began buying captured Africans and forcibly displacing them to the Americas during the [transatlantic slave trade](https://en.wikipedia.org/wiki/Atlantic_slave_trade), with the first documented transport leaving Africa and arriving in the Americas in 1525.[^9] The harrowing journey from Africa to the Americas became known as the [Middle Passage](https://en.wikipedia.org/wiki/Middle_Passage), during which okra and other African crops became especially important as sources of sustenance in the Americas-bound ships.[^10] Chris Smith traces the first accounts of okra’s arrival in South America to the 1600s, a century before coming to North America at the ports of Charleston and New Orleans.[^11] The details of okra's journey across the Atlantic, however, remain unclear, with some family oral histories suggesting that enslaved individuals hid the seeds of the plant in their hair. Both cookbook author Jessica B. Harris and Chris Smith argue, however, that such transports would have been unlikely; it would have been more likely that enslavers and traders brought okra and other African crops with the people they displaced to ensure that captives would eat and survive the Middle Passage.[^12] In this way, okra’s journey to the Americas was also one of force that ensured "slave owner control" over the individuals they enslaved.[^13] Nevertheless, in the Americas, okra and other African crops would become a means of reclamation against that forced displacement through the expression of an African past and identity in gardens and kitchens. 
 
-{% include embed/image.html src="wc:Navio_negreiro_-_Rugendas_1830.jpg" caption="Scene from the Middle Passage from *Navio negreiro* by Johann Moritz Rugendas" aspect="0.67" class="right" %}
+{% include embed/image.html src="wc:Navio_negreiro_-_Rugendas_1830.jpg" caption="Scene from the Middle Passage from *Navio negreiro* by Johann Moritz Rugendas" aspect="0.67" %}
 
 Okra thrived with other African crops in many of the gardens of the enslaved across the Americas.[^14] While the practice of cultivating gardens was not allowed in all plantations across the Americas, where plots were allotted to enslaved communities, the gardens became sites of physical and spiritual survival. As culinary historian Michael W. Twitty notes, the gardens of the enslaved often became sites of religious significance, featuring such mystical "power objects" as shells, other charms, and conjure bags, resulting in the fusion of African, Indigenous, and European traditions.[^15] There was also the physical necessity for food that the gardens sustained. Since many plantation owners provided their enslaved workers with little food, the allotted plots became community gardens whose cultivation ensured physical survival in places where "food supplies were chronically scarce."[^16] Okra was one of the main crops cultivated, a fact that was referenced by a number of early modern botanists and travelers to the Americas.[^17]
 
-{% include embed/map.html center="6.66461,-34.45313" zoom="2" caption="Migration from Africa to the Southern States" markers="|" geojson="American_South_Overlay.json|arrows.json" class="right" %}
+{% include embed/map.html center="6.66461,-34.45313" zoom="2" caption="Migration from Africa to the Southern States" markers="|" geojson="American_South_Overlay.json|arrows.json" %}
 
 One early reference is by [Willem Piso](https://en.wikipedia.org/wiki/Willem_Piso), a Dutch physician and naturalist who documented okra on a Brazilian plantation in 1658. Piso emphasized the important function gardens played not only in physically sustaining enslaved communities but also in connecting them to their homeland: "Just as the Europeans sometimes brought plants and fortunes, [...] so too the Africans, among the usual herbs brought here for study, even now nourish themselves [with plants] such as quigombo and sesame."[^18] This connection also lives through language, as quigombo is the name for okra in the Kimbundu language of Angola.[^19] In 1707, physician and naturalist Hans Sloane mentions okra as a staple, both as food and medicine, growing in the plots tended by the enslaved in Jamaica.[^20] In particular, he uses "Gardens" to describe the spaces where the enslaved cultivated their own crops.[^21] By 1792, okra had become one of the most prevalent crops among the African diaspora, with the English captain Hugh Crowe noting the prevalence of the vegetable as being "well-known" in the ports of Africa and the Americas and as an "ingredient in making soup" in the West Indies.[^22] Okra was leaving a mark in the written colonial record, transferring from the gardens and kitchens of the African diaspora to the greater American culinary scene. 
 
-{% include embed/image.html src="wc:Slave_quarters_on_a_sugar_Plantation_Wellcome_L0045265.jpg" caption="Slave quarters in a habitation in Martinique, by Jules Boilly, 1826" aspect="1.25" class="right" %}
+{% include embed/image.html src="wc:Slave_quarters_on_a_sugar_Plantation_Wellcome_L0045265.jpg" caption="Slave quarters in a habitation in Martinique, by Jules Boilly, 1826" aspect="1.25" %}
 
 While okra thrived in the gardens of the enslaved, the plant does not seem to have flourished in European kitchens. Early modern botanical writers such as Charles de L’Ecluse connect the crop’s origins to earlier Italian sources referencing Egypt.[^23] In terms of its use, early modern botanists primarily linked the plant to the gardens and the cuisines of enslaved Africans. When they referenced cultural transference, they focused on okra moving between enslaved Africans and Indigenous peoples of the Americas. For example, Piso notes that Indigenous communities in Brazil began cultivating and preparing the crops enslaved Africans brought.[^24] At the same time, there is evidence that Europeans living in plantation societies began to adopt okra into their diets. For example, Sloane hints at the European adoption of okra in seventeenth-century Jamaica. As he writes, the plant was "very carefully planted by _Europeans_, as well as Slaves in their Gardens."[^25] Indeed, the major role that enslaved individuals played in the agricultural and culinary development of the Americas would lead to the proliferation of okra in colonial kitchens, especially in the colonies of the American South and the Caribbean.[^26]
 
-{% include embed/image.html src="mobot31753000820123_0569.jpg" caption="Detailed image of okra fruit's interior and exterior from Hans Sloane's *A voyage to the islands Madera, Barbados, Nieves, S. Christophers and Jamaica*" description="Image of okra fruit's interior and exterior from Table 133 of Hans Sloane's *A voyage to the islands Madera, Barbados, Nieves, S. Christophers and Jamaica*, from the Biodiversity Heritage Library." aspect="0.77" class="right" %}
+{% include embed/image.html src="mobot31753000820123_0569.jpg" caption="Detailed image of okra fruit's interior and exterior from Hans Sloane's *A voyage to the islands Madera, Barbados, Nieves, S. Christophers and Jamaica*" description="Image of okra fruit's interior and exterior from Table 133 of Hans Sloane's *A voyage to the islands Madera, Barbados, Nieves, S. Christophers and Jamaica*, from the Biodiversity Heritage Library." aspect="0.77" %}
 
 # Black Culinary Heritage
 
 Another legacy of okra involves James Hemings, the head chef at Thomas Jefferson’s Monticello plantation. He arrived at the plantation as a boy among the many other enslaved persons living and working in Monticello and proved over time to be adept at culinary work. By 1784, the Jeffersons rewarded his culinary skills by having him accompany them to Europe and attend a Parisian cooking school. Upon the completion of his education, Hemings returned to the United States and became the first person to introduce several French dishes there.[^27]
 
-{% include embed/image.html src="wc:Thomas_Jefferson's_Monticello.JPG" caption="Jefferson's Monticello Plantation in Virginia" aspect="1.9" class="right" %}
+{% include embed/image.html src="wc:Thomas_Jefferson's_Monticello.JPG" caption="Jefferson's Monticello Plantation in Virginia" aspect="1.9" %}
 
 Though limited, the recognition Hemings received for his work was uncommon, given that he was an enslaved person. In fact, white enslavers in the South historically tried to deny the contributions African Americans made to their cuisine. For instance, Mary Randolph’s *The Virginia House-wife,* a highly regarded cookbook from 1824, claimed the techniques, practices, and recipes of the enslaved people doing this domestic work without acknowledging their contributions.[^28] 
 
-{% include embed/image.html src="wc:Mrs._David_Meade_Randolph,_head-and-shoulders_portrait,_right_profile_LCCN2007677865.jpg" caption="Mary Randolph, author of the *The Virginia House-Wife*" aspect="0.91" class="right" %}
+{% include embed/image.html src="wc:Mrs._David_Meade_Randolph,_head-and-shoulders_portrait,_right_profile_LCCN2007677865.jpg" caption="Mary Randolph, author of the *The Virginia House-Wife*" aspect="0.91" %}
 
 After the Civil War and the abolition of slavery, African Americans’ deep knowledge of okra began to come into clearer view. In 1918, [George Washington Carver](https://en.wikipedia.org/wiki/George_Washington_Carver), an agricultural scientist born into slavery, contributed his okra soup recipe to the culinary record: he combined sliced okra with tomatoes, rice, and other vegetables. By then, Carver had already made lasting contributions to American agricultural science through his scientific studies of agricultural practices for the cultivation of okra and other community garden crops, as well as ways okra fibers could be used to make rugs and rope.[^29] Carver’s knowledge of okra is particularly striking in personal writings and correspondence, notably in letters from 1907–1914 between himself and fellow American botanist Louis Herman Pammel.[^30] In response to one of Pammel’s letters, Carver explained why he would not be able to send him okra right away: "We are just planting Okra down here, so therefore I cannot [give] any of the green plants for at least a month, and up to date I have been unable to find the dry stalks, I will continue to look and if I can get any will forward them to you with pleasure."[^31] Carver’s letter highlights his familiarity with the okra cultivation process, emphasizing the plant’s month-long growing cycle, which on average requires 55 days to produce fruit.[^32]
 
-{% include embed/image.html src="wc:George_Washington_Carver_c1910_-_Restoration.jpg" caption="A Portrait of George Washington Carver" aspect="0.8" class="right" %}
+{% include embed/image.html src="wc:George_Washington_Carver_c1910_-_Restoration.jpg" caption="A Portrait of George Washington Carver" aspect="0.8" %}
 
 During okra’s growing cycle, the plant usually rises to a height of four-and-a-half feet and a branch width of two to three feet.[^33] Along with the short harvest time, okra also prefers a warm climate although, as Smith indicates, it can grow in more northerly regions with careful handling and preparation.[^34] Okra is also quite resilient against drought, though limited water negatively impacts the fruit’s quality and development.[^35]
 
-{% include embed/image.html src="wc:Okra_in_Margarita_Island.jpg" caption="Okra growing on Margarita Island" aspect="0.66" class="right" %}
+{% include embed/image.html src="wc:Okra_in_Margarita_Island.jpg" caption="Okra growing on Margarita Island" aspect="0.66" %}
 
 Despite the significant scientific and culinary achievements reached by African Americans such as George Washington Carver, by the 1930s, the entertainment and advertising businesses began using stereotypical images of Black people and their culinary contributions.[^36] These images downplayed the generations of forced labor and cultural knowledge required to gain the culinary skills and influence they possessed. In the wake of the Civil Rights Movement, however, Black communities began to take matters of representation into their own hands to contest racist characterizations. In the 1960s and 1970s, soul food dishes such as fried okra began to surge in popularity due to a wave of southern African Americans migrating north.[^37] The longing for old foodways birthed a movement of Black-authored soul food cookbooks like Hattie Rhinehart-Griffin’s 1969 *Soul-Food Cookbook.* In her cookbook, Rhinehart-Griffin included recipes and ingredients that epitomized home--referring to the South and to Africa--including her take on fried okra.[^38]
 
-{% include embed/image.html src="wc:Praline_Connection_New_Orleans_Sept_2018_Fried_Okra.jpg" caption="A New Orleans Style Fried Okra" aspect="1.33" class="right" %}
+{% include embed/image.html src="wc:Praline_Connection_New_Orleans_Sept_2018_Fried_Okra.jpg" caption="A New Orleans Style Fried Okra" aspect="1.33" %}
 
 Today, Black chefs are furthering the message of reconnecting with history by expanding the idea of Black food.[^39] Famed chef Marcus Samuelsson pays tribute to modern Black chefs, creatives, and food historians in his cookbook *The Rise: Soul of American Food*, which includes dishes coming from the large catalog of Black cuisine.[^40] Noteworthy among them is his version of a southern tradition with the [Leah Chase Gumbo](https://content.ctpublic.org/recipes/leah-chase-gumbo/) recipe, named in honor of American chef Leah Chase, who was known as the Queen of Creole Cuisine.[^41] By giving credit to Chase, Samuelsson underscores the complex network and history of diverse, nutritional, and delicious recipes crafted by Black chefs. 
 
-{% include embed/image.html src="wc:Gumbo_in_the_Pot.jpg" caption="Gumbo" aspect="1.5" class="right" %}
+{% include embed/image.html src="wc:Gumbo_in_the_Pot.jpg" caption="Gumbo" aspect="1.5" %}
 
 Gullah Geechee matriarch Emily Meggett is another Black chef working to reclaim Black culinary traditions through her cookbooks and recipes. In 2022, Meggett published *Gullah Geechee Home Cooking* to honor her ancestry and repair her peoples’ relationship with cooking and harvesting food. To do so, Meggett calls on okra, black-eyed peas, corn, and other foods to illuminate the beauty of traditional African American cuisine and to remind her readers that "before we were American, before we were enslaved, we were a people with an identity and culture that worked in collaboration with the earth, and benefited from its offerings."[^42] The reverence for African-American culinary knowledge and history that Meggett displays in her cookbook exemplifies the very attitude the soul food movement hoped to foster: one of respect and admiration for the food that helped them navigate a traumatic past.
 
-{% include embed/image.html src="wc:Gullah_s_carolina_1790.jpg" caption="Protrayal of Enslaved Gullah People" aspect="1.55" class="right" %}
+{% include embed/image.html src="wc:Gullah_s_carolina_1790.jpg" caption="Protrayal of Enslaved Gullah People" aspect="1.55" %}
 
 # The People's Vegetable
 
 Through farming, cooking, and eating, centuries of African Americans have reinforced the strength and conviction necessary to survive and thrive in the wake of so much hardship. Okra acts as one of the closest connections to life in Africa, a life that was ripped away from so many. And, with the help of its cultivators, it came to thrive. One final example of okra’s persistence is its inclusion in the New York Botanical Garden’s African American Garden, which opened in 2022. One of the garden’s purposes was to underscore that "the African American world of plants, like African life in the North American world, was one of adaptation and transformation."[^43] This is exactly the case with okra, which traveled with the African diaspora, and helped them survive, as they made their way across the Americas and across time. 
 
-{% include embed/image.html src="wc:Abelmoschus_moschatus_Medik._(AM_AK28139).jpg" caption="Herbarium Specimen of Okra" aspect="0.75" class="right" %}
+{% include embed/image.html src="wc:Abelmoschus_moschatus_Medik._(AM_AK28139).jpg" caption="Herbarium Specimen of Okra" aspect="0.75" %}
 
 [^1]: Wayne Cavadi, "Just What Is The Fighting Okra," *NCAA*, accessed June 18, 2024, <https://www.ncaa.com/news/baseball/article/2017-05-30/dii-baseball-championship-just-what-fighting-okra>.
 [^2]: "Traditions," *About DSU*, accessed June 18, 2024, <https://www.deltastate.edu/about-dsu/>.
