--- a/_posts/2025-07-16-tamarind.md
+++ b/_posts/2025-07-16-tamarind.md
@@ -14,6 +14,7 @@ published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/tamarind
 image:
   path: wc:Tamarindus_indica03.JPG
+auto_float: true
 ---
 
 
@@ -25,13 +26,13 @@ The grand and imposing hard-wood tree _[Tamarindus indica](Q80235)_, commonly kn
 
 Such contradictions have been explored through storytelling: the tree serves as creative inspiration, thematic motif, and simple theatrical site across myth, legend, and fiction.[^ref2] The tamarind got its small leaves, according to a [Bihar](Q1165) tribal story, when the exiled [Lord Rama](Q160213), [Lakshmana](Q917687), and [Sita](Q191114) came upon a tamarind grove, where the tree’s large leaves provided shelter. But Rama was convinced that they were meant to suffer during their exile and so he ordered Lakshmana to shoot at the leaves with his bow and arrow—the leaves have been split ever since.[^ref3]
 
-{% include embed/image.html src="tamarind_leaves_Flicker_CC_BY_SA_2.0.png" caption="Tamarind leaves, 2010. Jyothish Kumar P.G, Flickr, CC BY-SA 2.0." region="1,64,823,749" aspect="1.78" class="right" %}
+{% include embed/image.html src="tamarind_leaves_Flicker_CC_BY_SA_2.0.png" caption="Tamarind leaves, 2010. Jyothish Kumar P.G, Flickr, CC BY-SA 2.0." region="1,64,823,749" aspect="1.78" %}
 
 Though many cultures venerate the tree as sacred or home to gods, some purport the tree’s curses and dangers; some Indian and Caribbean communities warn that the tamarind is home to spirits. A [Hindu](Q9089) legend illustrates how the tree became cursed: one day, [Radha](Q113904), goddess of love and compassion, was on her way to meet [Krishna](Q42891) when she stepped on a piece of ripe tamarind fruit bark and cut her foot. Now late for her meeting with the god, she cursed the fruit to fall from the tree still unripe, as it does today.[^ref4] The sheer pervasiveness of the plant in visual, oral, and written cultures across the globe speaks to its mythological status as both sprawling and rooted, exemplifying the sturdy contradiction that is the tamarind tree. 
 
-{% include embed/image.html src="74846_155579.jpg" caption="Krishna Woos Radha, Boston Rasikapriya (Lover’s Breviary), c. 1610, India (Rajasthan, Amber), ink, opaque watercolor, and gold on paper, 21.6 × 13 cm (image)." attribution="Rogers Fund, 1918, Metropolitan Museum of Art" license="public domain" source="https://collectionapi.metmuseum.org/api/collection/v1/iiif/74846/155579/main-image" aspect="0.65" class="right" %}
-{% include embed/image.html src="38027_191266.jpg" caption="Kama Aims His Bow at Radha, Gita Govinda, c. 1665, India (Rajasthan, Mewar), ink and opaque watercolor on paper, 24.4 × 19.7 cm." attribution="Gift of Ernest Erickson Foundation, 1988, Metropolitan Museum of Art" license="public domain" source="https://collectionapi.metmuseum.org/api/collection/v1/iiif/38027/191266/main-image" aspect="1.25" class="right" %}
-{% include embed/image.html src="37911_150889.jpg" caption="Krishna Woos Radha, Gita Govinda (Loves of Krishna), c. 1695, India (Rajasthan, Mewar), ink and opaque watercolor on paper, 18.4 x 28.9 cm." attribution="Gift of Jeffrey Paley, 1975, Metropolitan Museum of Art" license="public domain" source="https://collectionapi.metmuseum.org/api/collection/v1/iiif/37911/150889/main-image" aspect="1.51" class="right" %}
+{% include embed/image.html src="74846_155579.jpg" caption="Krishna Woos Radha, Boston Rasikapriya (Lover’s Breviary), c. 1610, India (Rajasthan, Amber), ink, opaque watercolor, and gold on paper, 21.6 × 13 cm (image)." attribution="Rogers Fund, 1918, Metropolitan Museum of Art" license="public domain" source="https://collectionapi.metmuseum.org/api/collection/v1/iiif/74846/155579/main-image" aspect="0.65" %}
+{% include embed/image.html src="38027_191266.jpg" caption="Kama Aims His Bow at Radha, Gita Govinda, c. 1665, India (Rajasthan, Mewar), ink and opaque watercolor on paper, 24.4 × 19.7 cm." attribution="Gift of Ernest Erickson Foundation, 1988, Metropolitan Museum of Art" license="public domain" source="https://collectionapi.metmuseum.org/api/collection/v1/iiif/38027/191266/main-image" aspect="1.25" %}
+{% include embed/image.html src="37911_150889.jpg" caption="Krishna Woos Radha, Gita Govinda (Loves of Krishna), c. 1695, India (Rajasthan, Mewar), ink and opaque watercolor on paper, 18.4 x 28.9 cm." attribution="Gift of Jeffrey Paley, 1975, Metropolitan Museum of Art" license="public domain" source="https://collectionapi.metmuseum.org/api/collection/v1/iiif/37911/150889/main-image" aspect="1.51" %}
 
 # A Tree of Many Names
 
@@ -96,111 +97,111 @@ edge,15,5,in Guinea and Malaysia is a Tamarindus indica L. (1753)
 The tamarind tree is a nonendangered semi-evergreen fast-growing species. It is best suited to those regions characterized by seasonal dry forests, tropical seasonal forests, and savanna [biomes](Q101998).[^ref6] These biomes’ climates feature slightly strong thermal oscillation and concentrated rains during specific times of the year, resulting in water stress for plants during the dry season. As a drought-resistant tree, tamarind has the capacity to grow in poorly developed soils through nitrogen fixation, a feature shared by all species from the [Fabaceae](Q44448) family. In addition, it can endure aerosol salt from windy coastal areas and sequesters carbon. For these reasons, it’s not surprising that tamarind can be found in 54 countries along the plant’s historical circulation routes. In the [Sahelian region](Q106474492) and many other parts of Africa, tamarind fruits collected from natural populations or individual trees are essential components of the nonmonetized hidden harvest of wild resources. The assessment of the economic importance of the tamarind fruits’ hidden harvest requires estimating how much local populations would have to pay to replace these free resources.[^ref7] As such, tamarind acts as an enhancer of [agroforestry](Q397350) for small farmers and landless laborers in semi-arid areas in danger of [desertification](Q183481).
 
 <!-- image not found
-{% include embed/image.html src="https://www.rct.uk/sites/default/files/collection-online/3/b/519410-1424804520.jpg" caption="Tamarind Tree in Saras Baug, Pune, c.1870, albumen print, 18.9 x 24.0 cm, Royal Collection Trust/©Her Majesty Queen Elizabeth II 2020" class="right" %}
+{% include embed/image.html src="https://www.rct.uk/sites/default/files/collection-online/3/b/519410-1424804520.jpg" caption="Tamarind Tree in Saras Baug, Pune, c.1870, albumen print, 18.9 x 24.0 cm, Royal Collection Trust/©Her Majesty Queen Elizabeth II 2020" %}
 -->
 
 Some sources suggest that tamarind was introduced into [India](Q668), the world’s largest tamarind producer (and then spread to Southeast Asia) from Central Africa by Arab trade groups over land and sea. It is more likely, however, that Ethiopian merchants, who traded with India centuries before the Arabs, brought the plant to India via sea routes, keeping the long-lasting and nutritious tamarind pulp on board ships for food and drink. It is well-documented that the Arabs, perhaps after seeing tamarind thrive in India, traded the plant back to the Middle East and Europe.[^ref8] From Europe, the plant moved west with Spanish and Portuguese settlers, who transported it to Central and South America and the West Indies.
 
-{% include embed/map.html center="-0.70311,10.54688" zoom="1" basemap="Esri_WorldGrayCanvas" geojson="Tamarind_map.json" class="right" %}
+{% include embed/map.html center="-0.70311,10.54688" zoom="1" basemap="Esri_WorldGrayCanvas" geojson="Tamarind_map.json" %}
 
 Today, tamarind orchards are located across India with one of the oldest groves, Nallur Amarai, located just outside of [Begaluru](Q1355). This 54-acre grove and recently declared biodiversity heritage site is believed to have been planted during the [Chola dynasty](Q151148) in the twelfth century, though the oldest dated tree is 400 years old. While the plant has been cultivated in orchards and grown as a large-scale crop for commercial purposes, the trees are most frequently referenced in historical literature as singular trees, small ornamental groves (frequently in the shape of [bonsai](Q64365), especially in South Asia), or along roadsides. 
 
-{% include embed/image.html src="wc:Nallur_tamarind1.jpg" caption="Old tamarind tree, Nallur heritage grove, Bangalore, India, 2018." aspect="1.33" class="right" %}
+{% include embed/image.html src="wc:Nallur_tamarind1.jpg" caption="Old tamarind tree, Nallur heritage grove, Bangalore, India, 2018." aspect="1.33" %}
 
 This is the case for the [tamarind trees](img1/zoomto/1072,3109,1345,1166) featured, in text and image, in the lavishly illustrated late sixteenth-century manuscript _[Bãburnãma](Q1906014)_ (History of Babur), which details the life of [Emperor Babur](Q797848) (1483–1530), founder of the [Mughal](Q33296) dynasty. One of the first autobiographies in Islamic literature, the text was written in the Chagatai language and later translated into Persian for this manuscript at the behest of Babur’s grandson, Emperor Akbar, so that his political and military exploits might be further disseminated. The finely detailed tamarind tree illustration seen here is described as a "very good-looking tree, giving dense shade" that "grows wild in masses," a depiction supported by the groves of tamarind trees that are referenced throughout Babur’s travels.[^ref9]
 
-`image #img1 src=Mughal_style_tamarind_Brit_Lib_copyright_The_British_Library.png aspect=0.61 .small`
+{% include embed/image.html id="img1" src="Mughal_style_tamarind_Brit_Lib_copyright_The_British_Library.png" aspect="0.61" %}
 
 As one of the largest trees in India, tamarinds have been incorporated into garden designs as a source of shade since the Mughal dynasty. Rooted in Persian traditions, [Mughal gardens](Q2429892), called _charbaghs_ (fourfold gardens), were characterized by ornate fountains and water systems.[^ref10] The tamarind tree was often found in gardens like those built in [Lahore](Q11739) by Emperor Babur’s son, [Kamran Mirza](Q12419221). Centuries later, during British colonial rule of the Indian subcontinent, tamarind trees were used in gardens and along roadsides by high-ranking officers. At the turn of the nineteenth century, though his plans were never realized, [Governor-General of India Lord Wellesley](Q335205) attempted to line a section of the Great Trunk Road from a palace in Barrackpore to the Government House in Calcutta, with tamarind, mango, peepul, and teak trees.[^ref11]
 
-{% include embed/image.html src="Babur_supervising_laying_out_Victoria_Albert_Mus_copyright_Victoria_Albert_Museum.jpg" aspect="0.77" class="right" %}
-{% include embed/image.html src="wc:Shalimar_garden_1.JPG" aspect="1.33" class="right" %}
+{% include embed/image.html src="Babur_supervising_laying_out_Victoria_Albert_Mus_copyright_Victoria_Albert_Museum.jpg" aspect="0.77" %}
+{% include embed/image.html src="wc:Shalimar_garden_1.JPG" aspect="1.33" %}
 
 # Tamarind’s Medicinal and Culinary Uses
 
 Virtually every part of the tamarind tree—seeds, fruity pulp, bark, root, and leaves—is edible in some form. Its fruit contains the rather unusual tantric acid that makes it simultaneously the "most acidic and sweetest fruit."[^ref12] The acid’s sweet-sour flavoring has a cooling effect in hot weather, which makes it a valuable ingredient in a wide variety of dishes and beverages and inextricably links the fruit to warm climates. Moreover, as French botanist [Joseph de Tournefort](Q312959) (1656–1708) conjectured, the fruit’s acidity lends itself to uncountable medicinal uses, such as a ["purging medicine,"](https://luna.folger.edu/luna/servlet/detail/FOLGER~3~3~18513~281201:Receipt-book-of-Catherine-Bacon--ma) a [laxative,](https://archive.org/details/b2130659x_0002/page/172/mode/2up?q=tamarind*) an [aid in facial paralysis,](https://archive.org/details/englishtranslati00susruoft/page/n4/mode/1up?q=tamarind*) and a [flavoring to make more bitter or unpleasant medicines taste sweeter.](https://archive.org/details/b2130659x_0002/page/172/mode/2up?q=tamarind*)
 
-{% include embed/image.html src="wc:(Tamarindus_indica,L.).,_da_Coleção_Brasiliana_Iconográfica.jpg" caption="Jose Joaquim Freire, Tamarindus indica, L., 1700s, watercolor, 34.5 x 24 cm." aspect="0.71" class="right" %}
+{% include embed/image.html src="wc:(Tamarindus_indica,L.).,_da_Coleção_Brasiliana_Iconográfica.jpg" caption="Jose Joaquim Freire, Tamarindus indica, L., 1700s, watercolor, 34.5 x 24 cm." aspect="0.71" %}
 
 Tamarind is mentioned in traditional Sanskrit literature and traditional African medical texts like the [_Kitab al-qawl al-sinna_.](http://www.cci.uct.ac.za/usr/cci/publications/aria/download_issues/2012/Mukhtar%20Bunza.pdf) It also appears in the _[Susruta-Samhita](Q1995239)_, an Ayurvedic medicine text. With such a diverse array of uses—and its hearty ability to withstand hot, dry climates—the plant captured the imagination of colonists on the hunt for profitable crops. The well-known synonym _T. occidentalis_, for example, was included in physician and horticulturalist [Henry Perrine’s](Q4268924) 1838 report to the U.S. Congress House Committee on Agriculture, in which he includes _T. occidentalis_ as a notable crop of value.
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N898HvO8a50-MMGVxGCR-MGbd6ftuk7b&timenav-position=bottom&hash-bookmark=false&initial-zoom=1&height=650" class="right" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N898HvO8a50-MMGVxGCR-MGbd6ftuk7b&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" %}
 
 Tamarind’s resilience has made it a central part of herbal medicine practices across history. The seventeenth-century oil painting created after a design by the French printmaker [Nicolas de Larmessin II](Q16666497) portrays three men as the personifications of medicine, pharmacy, and surgery. At the center of the composition, the physician personifying medicine is cloaked in garb that bears the names of medieval authors central to traditional Western medicine, including [Avicenna](Q8011) and [Mesue](Q1291511), two Persian polymaths credited by Tournefort as key to the spread of knowledge about tamarind. Taking a closer look, just beneath the medicine man’s hand, is a [written prescription](img2/zoomto/366,572,344,300) to treat medical ailments, and nestled within the text that includes "[cassia](Q162882)" and "[rhubarb](Q7535)" is none other than "tamarind."
 
-`image #img2 src=b12023747_V0017117.jpg aspect=0.87`
+{% include embed/image.html id="img2" src="b12023747_V0017117.jpg" aspect="0.87" %}
 
 Tracing the appearance of the tamarind tree’s commonly used parts across [materia medica](Q1291275), travelogues, and cookbooks, is a means to track the dissemination of traditional herbal Ayurvedic medicinal knowledge through the peak of colonial expansion, to call attention to the colonial economic interests in _T. indica_, and to foreground the diverse religious and culinary cultures that the plant sustains. 
 
-{% include embed/image.html src="wc:Naturalis_Biodiversity_Center_-_L.0939530_-_Bernecker,_A._-_Tamarindus_indica_Linnaeus_-_Artwork.jpeg" aspect="1.23" class="right" %}
-{% include embed/image.html src="10.5555_al.ap.specimen.linn-hs78-1-3.jpg" caption="Tamarindus indica" attribution="Specimen image provided courtesy of JSTOR. Source=https://plants.jstor.org/stable/10.5555/al.ap.specimen.linn-hs78-1-3" description="Filed as Tamarindus indica L. [family FABACEAE]" aspect="0.64" class="right" %}
+{% include embed/image.html src="wc:Naturalis_Biodiversity_Center_-_L.0939530_-_Bernecker,_A._-_Tamarindus_indica_Linnaeus_-_Artwork.jpeg" aspect="1.23" %}
+{% include embed/image.html src="10.5555_al.ap.specimen.linn-hs78-1-3.jpg" caption="Tamarindus indica" attribution="Specimen image provided courtesy of JSTOR. Source=https://plants.jstor.org/stable/10.5555/al.ap.specimen.linn-hs78-1-3" description="Filed as Tamarindus indica L. [family FABACEAE]" aspect="0.64" %}
 
 # Leaves 
 
 In its mature state, the tamarind tree’s vast crown is a place of refuge. Because the tree can grow in developed areas, be it on the side of the road, in barren spaces, or in commercial areas, it’s a common gathering place for people seeking relief from hot sun or congregating for sacred reasons.[^ref13] In many cultures the tree has historically been considered holy. Tamil culture, for example, recognizes Puliyidaivalaiyamman as the tamarind [tree deity](Q811571) who offers fruit as a blessing.[^ref14] The leaves, young seedlings, and flowers that make up the crown are made into [chutneys](Q275650), added to [sambar](Q188420) and soup.[^ref15] Outside of the kitchen, the leaves, which contain tannins, [can be used as a natural mordant](https://www.sciencedirect.com/science/article/pii/S131961031100202X) to affix dye to textiles. In a medicinal context, the leaves can be dried or boiled for use as poultices to relieve swelling.[^ref16]
 
-{% include embed/image.html src="b28125800_0001_0057.jpg" aspect="0.6" class="right" %}
-{% include embed/image.html src="wc:Idital_Wall_Painting.jpg" aspect="2.13" class="right" %}
+{% include embed/image.html src="b28125800_0001_0057.jpg" aspect="0.6" %}
+{% include embed/image.html src="wc:Idital_Wall_Painting.jpg" aspect="2.13" %}
 
 # Seeds and Pods
 
 Tamarind seeds are as versatile as they are valuable. When pilgrims flocked to the desert to meet Khorasan mystic poet and saint Abu Said (1305–1335), they paid good sums to obtain seeds from the tamarind tree he sat beneath.[^ref17] Tamarind seeds are consumable in a number of ways: after they are soaked to remove the seed coat, they can be roasted, boiled, fried, or ground.[^ref18] In [Thailand](Q869), the ground seeds are used as a coffee substitute.[^ref19] In Ayurvedic medicine, the shells of the tamarind pods are burned to create an "alkaline ash" to then be used in other recipes.[^ref20] In addition to its culinary uses, the seeds can be made into a powder that is used in the textile and paper industries.[^ref21] In India, [Saura tribal painting](https://en.wikipedia.org/wiki/Saura_painting#Paintings) in [Orissa](Q22048) (now called Odisha) uses the tamarind seed’s natural brown hue to dye the background of paintings. Likewise, black lacquer, referred to as tamarind-seed script, was and continues to be used to create embellished Burmese characters in religious [Pali](Q36727) texts like the _Kammavaca_, a decorative manuscript that details monastic duties.[^ref22]
 
-{% include embed/image.html src="tamarind_pod_Nat_Ag_Lib_public_domain.png" caption="Amanda Almira Newton, Tamarindus indica (Indian tamarind), 1908, watercolor, 15 x 24 cm." aspect="0.64" class="right" %}
+{% include embed/image.html src="tamarind_pod_Nat_Ag_Lib_public_domain.png" caption="Amanda Almira Newton, Tamarindus indica (Indian tamarind), 1908, watercolor, 15 x 24 cm." aspect="0.64" %}
 
-{% include embed/image.html src="wc:Burmese_Kammavaca_Manuscript.jpg" caption="Burmese Kammavaca Manuscript, 19th century." aspect="4" class="right" %}
+{% include embed/image.html src="wc:Burmese_Kammavaca_Manuscript.jpg" caption="Burmese Kammavaca Manuscript, 19th century." aspect="4" %}
 
 Fifteen-inch tall redware jars like the one housed at the [Strawbery Banke Museum](Q7622525) in Portsmouth, New Hampshire might have been used to carry and transport tamarind seeds and pods. The jar was found at the [Marshall Pottery site](https://sbm.oncell.com/en/29-marshall-pottery-site-47035.html) in the 1970s, which had been used by the family of Samuel Marshall, a potter, and three enslaved African people named Mercer, Bess, and Adam. The jar is cited as possible evidence of tamarind’s role in the history of trade between the New England city and the West Indies, as well as the interconnected significance of material culture and culinary history in the larger history of enslavement in the United States. The pods, carried and stored from the West Indies to New England, bore witness to the horrors of enslavement across time and trade.[^ref23]
 
-{% include embed/image.html src="container_strawbery_banke_copyright_Strawbery_Banke_Museum_2017.jpeg" aspect="0.75" class="right" %}
+{% include embed/image.html src="container_strawbery_banke_copyright_Strawbery_Banke_Museum_2017.jpeg" aspect="0.75" %}
 
 # Pulp
 
 Tamarind pulp makes up roughly 30 to 50 percent of a ripe fruit.[^ref24] The pods are picked at various stages in the fruit’s life cycle for different flavor profiles. The sour fruit from immature pods is incorporated into pickles and chutneys, and is used to season rice, fish, and meat. The mature but unripe fruit can be eaten in food or independently, such as in the Bahamas where the pods are roasted on coals until the skins burst and the hot pulp is eaten coated in wood ashes.[^ref25] The ripe mature pod, which contains a sweet-sour brown pulp, is used as a seasoning for sauces, curries, desserts, drinks, and in a variety of street foods, such as golgappa, pani puri, and phuchka in northern and eastern India.[^ref26]
 
-{% include embed/image.html src="wc:Tamarind_(marketed).jpg" caption="Tamarind (Tamarindus indica) pods and pulp for sale at a market, Baubau City, Buton Island, Indonesia, 2012." aspect="0.75" class="right" %}
-{% include embed/image.html src="wc:Tamarind_paste.jpg" caption="Jarred tamarind paste, 2018." aspect="1.40" class="right" %}
-{% include embed/image.html src="wc:Puliyogare_Or_Tamarind_Rice.jpg" caption="Puliyogare (Tamarind Rice), a popular South Indian dish, 2021." aspect="1" class="right" %}
+{% include embed/image.html src="wc:Tamarind_(marketed).jpg" caption="Tamarind (Tamarindus indica) pods and pulp for sale at a market, Baubau City, Buton Island, Indonesia, 2012." aspect="0.75" %}
+{% include embed/image.html src="wc:Tamarind_paste.jpg" caption="Jarred tamarind paste, 2018." aspect="1.40" %}
+{% include embed/image.html src="wc:Puliyogare_Or_Tamarind_Rice.jpg" caption="Puliyogare (Tamarind Rice), a popular South Indian dish, 2021." aspect="1" %}
 
 Tamarind water is an immensely popular drink, both soothing and cooling, and is offered in restaurants and sold in markets, in the hot climates of Central America, Southeast Asia, and Africa. In north India, tamarind water infused with cumin, pepper, and other spices is a popular summer beverage known as [jal jeera](Q6125787). Made by adding tamarind pulp to water and sweetened, tamarind water is easy to make at home—a quick YouTube search reveals dozens of how-to videos for making it.  
 
-{% include embed/youtube.html id="pXtKAmhKdpI" aspect="1.6" class="right" %}
+{% include embed/youtube.html vid="pXtKAmhKdpI" aspect="1.55" %}
 
 Tamarind water has been around since at least the late medieval period as an enjoyable beverage and a medicinal drink. [Marco Polo,](Q6101) in his travel accounts, observes merchants being "force[d]...to swallow a stuff called _Tamarindi_, mixed in sea-water" that results in "violent purging."[^ref27] A few centuries later, [John Parkinson,](Q256288) apothecary to [James I](Q79972) and Royal Botanist to [Charles I](Q81506), writes of tamarind in his [_Theatrum botanicum_](https://www.biodiversitylibrary.org/page/56600139) (1640): "it doth exceedingly helpe to assuage the thirst, if an ounce there-of be dissolved in faire water, and a little Sugar mixed therewith." Parkinson notes that the drink is a particularly suitable thirst-quencher for "people of the hot countries."
 
-{% include embed/image.html src="wc:Travels_in_the_interior_of_Africa,_to_the_sources_of_the_Senegal_and_Gambia;_performed_by_command_of_the_French_Government,_in_the_year_1818_(1820)_(14760831431).jpg" caption="At the point of death during his travels to Africa, Gaspard Théodore Mollien turns to tamarind as a remedy, published in Gaspard Théodore Mollien, Travels in the Interior of Africa, 1820, London: H. Colburn & Co." aspect="1.34" class="right" %}
+{% include embed/image.html src="wc:Travels_in_the_interior_of_Africa,_to_the_sources_of_the_Senegal_and_Gambia;_performed_by_command_of_the_French_Government,_in_the_year_1818_(1820)_(14760831431).jpg" caption="At the point of death during his travels to Africa, Gaspard Théodore Mollien turns to tamarind as a remedy, published in Gaspard Théodore Mollien, Travels in the Interior of Africa, 1820, London: H. Colburn & Co." aspect="1.34" %}
 
 Similarly, Mrs. A.C. Carmichael, a Scottish migrant to the British West Indies and wife of enslaver [John Wilson Carmichael](Q4215366), points out in [_Domestic Manners and Social Condition of the White, Coloured, and Negro Populations of the West Indies_](https://www.google.com/books/edition/Domestic_Manners_and_Social_Condition_of/uXU-1YGjQyYC?hl=en&gbpv=1&dq=%22Domestic%20Manners%20and%20Social%20Condition%20of%20the%20White%22%20%2B%201834%20%2B%20During%20the%20first%20year%20I%20resided%20in%20St.%20Vincent%2C%20I%20never%20felt%20thirst%20between%20breakfast%20and%20dinner%2C%20unless%20I%20had%20walked%20or%20rode%20out%20during%20the%20heat%20of%20the%20day&pg=PA314&printsec=frontcover) (1834) that the tamarind beverage is drunk in ever-increasing quantities as settler-colonists spend more time in the tropics, resulting in more "relaxed constitution[s]." As Carmichael recounts, her own alimentary desires follow this shift: "During the first year I resided in [St. Vincent](Q379656), I never felt thirst between breakfast and dinner, unless I had walked or rode out during the heat of the day; but before I left the West Indies, I felt a great change in this respect, taking sometimes as many as six or seven large glasses of water in the forenoon." Both Carmichael and Parkinson’s commentary expressly connects ingesting tamarind water to hot climates, and the people who occupy those areas. In this way, the two actively perpetuated a centuries-long discourse linking climate, health, and race that underpinned colonial rule.
 
-{% include embed/image.html src="LSW_RBGM_MN_CD3_279-001.jpg" aspect="1.46" class="right" %}
+{% include embed/image.html src="LSW_RBGM_MN_CD3_279-001.jpg" aspect="1.46" %}
 
 # Cooking and Empire: Tamarind Recipes
 
 Tamarind is most known for its culinary uses and is a staple in Indian cuisine. During or following their time in the British colonies, white women colonists like Mrs. Carmichael would often feature tamarind in English-language colonial cookbooks. Flora Steel and Grace Gardiner’s 1909 [_The complete Indian housekeeper & cook_,](https://archive.org/details/b21528640/mode/2up) for example, instructs readers to use tamarind water to quench their thirst in the course of their missionary work. The authors refer to tamarind using the Hindi term "Imli," suggesting that their knowledge of the plant comes either directly or indirectly from those speaking Hindi. The cookbook does not offer any insight into how the British women gained access to the tamarind itself–there are no instructions for harvesting the pods from the trees or even directions for how best to acquire the plant from a market. This suggests that the British women could easily obtain tamarind. Some British cooks noted that when unable to import tamarind, they "had to rely on lemon juice (and sometimes sour gooseberries) as a substitute."[^ref28] British cooks like [Eliza Acton](Q542825) even advocated for the importation of tamarind "in the shell - not preserved" in an effort to replicate the cuisines made in India.[^ref29]
 
-{% include embed/image.html src="b21528640_0174.jpg" aspect="0.63" class="right" %}
+{% include embed/image.html src="b21528640_0174.jpg" aspect="0.63" %}
 
 Historically, upper-class white British women in India, or memsahibs, employed servants to do their grocery shopping, but notably their role in acquiring and obtaining tamarind is barely mentioned in the British women’s cookbooks. Nupur Chaudhuri argues that memsahibs contributed to creating "an image of an Indian servant class which they, their friends, and families generalized to all Indians," and that they did so through their personal correspondence, letters in magazines and periodicals, and also in their published cookbooks.[^ref30]
 
-{% include embed/image.html src="b11916606_V0019937-LS-LS.jpg" aspect="0.71" class="right" %}
+{% include embed/image.html src="b11916606_V0019937-LS-LS.jpg" aspect="0.71" %}
 
 Tamarind has been used as an ingredient in chutneys, curries, and pickles throughout Indian culinary history. Historian Lizzie Collingham describes how, after its arrival in India from eastern Africa via Arab traders, tamarind helped characterize South Indian cuisine, known for its rich sauces and "sour notes."[^ref31] The use of tamarind is not limited to South India, however, and appears in cuisines across the country and South Asia at large. One notable chapter in colonial Indian culinary history is detailed in [Chitra Deb’s](Q52161948) _Women of the Tagore Household_, a history of the women in the Bengali Brahmin family. Deb writes that "cooking was an artform for women… one of their main modes of expression of their artistic abilities."[^ref32] Deb’s book contains many stories of these fascinating women, but she pays particular attention to the culinary prowess of [Mrinalini Devi](Q28561919), wife of [Rabrindranath Tagore](Q7241), and [Pragyasundari Devi](Q32986435), daughter of [Hemendranath Tagore](Q5711295), Rabrindranath Tagore’s niece.[^ref33] Pragya, as Deb refers to her, is known for her 1902 publication of the Bengali cookbook _Aamish O Niramish Aahar_.[^ref34] Of the many dishes that Deb cites from Pragya’s cookbooks, she notes a _Saraswati ambol_ made from tamarind and a curried raw tamarind with alum as two of Pragya’s most fascinating creations.[^ref35]
 
-{% include embed/image.html src="2015.336370.Amish-O_0006.jpg" aspect="0.65" class="right" %}
+{% include embed/image.html src="2015.336370.Amish-O_0006.jpg" aspect="0.65" %}
 
 Just as tamarind has been present in colonial kitchens, it has also been used by the people displaced by colonial regimes as an avenue to create community. Hawa Hassan and Julia Turshen’s cookbook [_In Bibi’s Kitchen_](https://www.worldcat.org/title/in-bibis-kitchen-the-recipes-stories-of-grandmothers-from-the-eight-african-countries-that-touch-the-indian-ocean/oclc/1136960226&referer=library_profile&returnRegistryId=105808) (2020) features elder women’s (grandmother’s) recipes through the lens of their larger communities. The South African section most prominently features tamarind, highlighting the culinary traditions of the Cape Malay people who are [descendants of enslaved Muslims](https://www.cnn.com/travel/article/cape-malay-cuisine-south-africa/index.html) forcibly brought to South Africa by the Dutch East India Company. The grandmothers share a recipe for Denningvleis, a sweet-and-sour lamb stew. In the introduction to their cookbook, Hassan and Turshen stress the care and respect they brought to its contents, written outside of the white male gaze that has dominated so much of tamarind’s determined value on a global market since the height of empire. The authors take pride in the everyday home cooking of the elder women they interviewed and feature–everyday cooking that utilized tamarind before, despite, and after European colonization.
 
-{% include embed/image.html src="wc:Bo-Kaap_Cape_Town_South_Africa.jpg" caption="Bo-kaap, the old Malay quarter of Cape Town, South Africa, with Signal Hill behind the colorful homes." aspect="1.78" class="right" %}
+{% include embed/image.html src="wc:Bo-Kaap_Cape_Town_South_Africa.jpg" caption="Bo-kaap, the old Malay quarter of Cape Town, South Africa, with Signal Hill behind the colorful homes." aspect="1.78" %}
 
 # The Story of a Tamarind Tree
 
 Tamil writer [Sundara Ramaswamy’s](Q2893448) 1966 novel [_Oru Puliyamarathin Kadai_ (Tamarind History)](https://www.worldcat.org/title/tamarind-history/oclc/891509442&referer=brief_results) begins "There is no road that does not end at the base of the tamarind tree." Described in [one review](https://www.thebookreviewindia.org/living-and-dying/) as a _[sthala purana](Q188602)_ (place-legend or narrative of a place), the novel’s opening pages describe one village’s lone but vibrant tamarind tree alongside its various human-projected monikers—silent witness, self-reliant, mother-tree, beacon of dignity—before informing the reader that it was destroyed. As a narrative of the tamarind tree’s "living and dying," the novel depicts the tamarind as both an ancient witness to and active participant in human movements, reminiscent of the tree’s uses in spreading and growing pods that quench thirst even in the driest of environments. Tamarind’s steady presence in storytelling, from ancient myths to the postmodern novel, is a testament to the plant’s enduring uses as a foodstuff.
 
-{% include embed/image.html src="CHSDM-37ED16A7EC7B2-000001.jpg" caption="Frederic Edwin Church, Indian Tamarind Trees in Jamaica, 1865, graphite on green-gray wove paper, 26.2 x 25.4 cm (sheet)." attribution="Cooper Hewitt, Smithsonian Design Museum" license="CC0" aspect="0.99" class="right" %}
+{% include embed/image.html src="CHSDM-37ED16A7EC7B2-000001.jpg" caption="Frederic Edwin Church, Indian Tamarind Trees in Jamaica, 1865, graphite on green-gray wove paper, 26.2 x 25.4 cm (sheet)." attribution="Cooper Hewitt, Smithsonian Design Museum" license="CC0" aspect="0.99" %}
 
 Interestingly, tamarind has also been the source of the material on which stories are literally written. In his important text [_The materia medica of the Hindus_](https://archive.org/details/b21934113/page/40/mode/2up)(1877), Uday Chand Dutt includes accounts of how some of the manuscripts he referenced to compile his own text were made from tamarind-seed emulsions: the emulsions were used to make paper providing a surface for easy writing. Perhaps it is no surprise that such an eminently useful plant would help inspire stories as well as serve the purpose of recording narratives, recipes, and histories of which it so often played an important, and ubiquitous, role. The tamarind continues to be a sturdy contradiction even into the present, as we continue to learn from the plant’s many complexities. 
 
-{% include embed/image.html src="sweet_tamarind_seeds_Flicker_CC_BY_NC_ND_2.0.png" caption="Sweet tamarind, 2007." aspect="1.33" class="right" %}
+{% include embed/image.html src="sweet_tamarind_seeds_Flicker_CC_BY_NC_ND_2.0.png" caption="Sweet tamarind, 2007." aspect="1.33" %}
 
 [^ref1]: Boukary O. Diallo et al., "Breeding system and pollination biology of the semi-domesticated fruit tree, _Tamarindus indica_ L. (Leguminosae: Caesalpinioideae): Implications for fruit production, selective breeding, and conservation of genetic resources," _African Journal of Biotechnology_ 7, no 22 (2008): 4068–4075.
 [^ref2]: "Tamarind – Herb of the Month (2020)," The Herb Society of America Blog, accessed August 2021. [https://herbsocietyblog.wordpress.com/tag/tamarind-legends/](https://herbsocietyblog.wordpress.com/tag/tamarind-legends/)
