Downsized some images and update vis-network viewer tags

--- a/_posts/2025-07-16-peony.md
+++ b/_posts/2025-07-16-peony.md
@@ -56,7 +56,7 @@ node,Q150665,Charles VI,wc:Retrat_de_Carles_III_davant_el_port_de_Barcelona%2C_F
 edge,5,Q150665,member of the court of
 {: #aml-network-csv }
 
-`vis-network #aml-network caption="Anna Maria Luisa de Medici’s Network" aspect=1`
+{% include embed/vis-network.html id="aml-network" caption="Anna Maria Luisa de Medici’s Network." aspect="1" %}
 
 # The Popularity of Peonies
 
