--- a/_posts/2025-07-16-tamarind.md
+++ b/_posts/2025-07-16-tamarind.md
@@ -90,7 +90,7 @@ edge,15,Q80235,common name
 edge,15,5,in Guinea and Malaysia is a Tamarindus indica L. (1753)
 {: #tamarindus_countries-csv }
 
-`vis-network #tamarindus_countries aspect=1`
+{% include embed/vis-network.html id="tamarindus_countries" aspect="1" %}
 
 # The Tamarind’s Locale 
 
@@ -110,7 +110,7 @@ Today, tamarind orchards are located across India with one of the oldest groves,
 
 This is the case for the [tamarind trees](img1/zoomto/1072,3109,1345,1166) featured, in text and image, in the lavishly illustrated late sixteenth-century manuscript _[Bãburnãma](Q1906014)_ (History of Babur), which details the life of [Emperor Babur](Q797848) (1483–1530), founder of the [Mughal](Q33296) dynasty. One of the first autobiographies in Islamic literature, the text was written in the Chagatai language and later translated into Persian for this manuscript at the behest of Babur’s grandson, Emperor Akbar, so that his political and military exploits might be further disseminated. The finely detailed tamarind tree illustration seen here is described as a "very good-looking tree, giving dense shade" that "grows wild in masses," a depiction supported by the groves of tamarind trees that are referenced throughout Babur’s travels.[^ref9]
 
-{% include embed/image.html id="img1" src="Mughal_style_tamarind_Brit_Lib_copyright_The_British_Library.png" aspect="0.61" %}
+{% include embed/image.html id="img1" src="Mughal_style_tamarind_Brit_Lib_copyright_The_British_Library.jpg" aspect="0.61" %}
 
 As one of the largest trees in India, tamarinds have been incorporated into garden designs as a source of shade since the Mughal dynasty. Rooted in Persian traditions, [Mughal gardens](Q2429892), called _charbaghs_ (fourfold gardens), were characterized by ornate fountains and water systems.[^ref10] The tamarind tree was often found in gardens like those built in [Lahore](Q11739) by Emperor Babur’s son, [Kamran Mirza](Q12419221). Centuries later, during British colonial rule of the Indian subcontinent, tamarind trees were used in gardens and along roadsides by high-ranking officers. At the turn of the nineteenth century, though his plans were never realized, [Governor-General of India Lord Wellesley](Q335205) attempted to line a section of the Great Trunk Road from a palace in Barrackpore to the Government House in Calcutta, with tamarind, mango, peepul, and teak trees.[^ref11]
 
@@ -147,7 +147,7 @@ In its mature state, the tamarind tree’s vast crown is a place of refuge. Beca
 
 Tamarind seeds are as versatile as they are valuable. When pilgrims flocked to the desert to meet Khorasan mystic poet and saint Abu Said (1305–1335), they paid good sums to obtain seeds from the tamarind tree he sat beneath.[^ref17] Tamarind seeds are consumable in a number of ways: after they are soaked to remove the seed coat, they can be roasted, boiled, fried, or ground.[^ref18] In [Thailand](Q869), the ground seeds are used as a coffee substitute.[^ref19] In Ayurvedic medicine, the shells of the tamarind pods are burned to create an "alkaline ash" to then be used in other recipes.[^ref20] In addition to its culinary uses, the seeds can be made into a powder that is used in the textile and paper industries.[^ref21] In India, [Saura tribal painting](https://en.wikipedia.org/wiki/Saura_painting#Paintings) in [Orissa](Q22048) (now called Odisha) uses the tamarind seed’s natural brown hue to dye the background of paintings. Likewise, black lacquer, referred to as tamarind-seed script, was and continues to be used to create embellished Burmese characters in religious [Pali](Q36727) texts like the _Kammavaca_, a decorative manuscript that details monastic duties.[^ref22]
 
-{% include embed/image.html src="tamarind_pod_Nat_Ag_Lib_public_domain.png" caption="Amanda Almira Newton, Tamarindus indica (Indian tamarind), 1908, watercolor, 15 x 24 cm." aspect="0.64" %}
+{% include embed/image.html src="tamarind_pod_Nat_Ag_Lib_public_domain.jpg" caption="Amanda Almira Newton, Tamarindus indica (Indian tamarind), 1908, watercolor, 15 x 24 cm." aspect="0.64" %}
 
 {% include embed/image.html src="wc:Burmese_Kammavaca_Manuscript.jpg" caption="Burmese Kammavaca Manuscript, 19th century." aspect="4" %}
 
