--- a/_posts/2025-08-28-gulmohar.md
+++ b/_posts/2025-08-28-gulmohar.md
@@ -58,7 +58,7 @@ European fascination with the plant continued to grow. In the French herbal _His
 
 Towards the end of the decade, in 1838, the [Agricultural and Horticultural Society of India](Q115317665) decided to take on an imperial “experiment” to be conducted “on a magnificent scale”: the gradual introduction and eventual “naturalising” of the world’s “indigenous” plants within India.[^16] As the Society’s leading members wrote in their correspondence, the successful introduction of valuable plants into the “countries they rule… can scarcely be questioned, particularly in the Indian case due to the vegetarian diet of the population, and the fact that more plant species would act as safeguards during “severe visitations of Providence,” like drought and famine. They claimed that due to the “productive power” of the soil, and the vast varieties of landscape, plants “of every climate, except the Arctic, may be so completely naturalised” in the country. This plan would also involve the “interchange of plants between Bombay and Calcutta,” two centers of British power. The [Calcutta Botanic Garden](Q3346386), established in 1787, was a major site of plant exchange, “a center of experimentation with living plants from all over the subcontinent and the world”,[^17] and Bombay was home to gardens scattered across the localities of Parel, Mazgaon, and Colaba, in addition to a botanical garden at the nearby Dapuri, which lay within the [Bombay Presidency](Q891827).[^18]
 
-{% include embed/image.html manifest="https://collectionapi.metmuseum.org/api/collection/v1/iiif/287858/608144/main-image" caption="The Calcutta Botanic Garden. Viscount Valentia, the Earl of Mountnorris in Northern Ireland, visited the garden in 1808. Image credit: Gilman Collection, The Metropolitan Museum of Art." aspect="1.24" %}
+{% include embed/image.html src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/287858/608144/main-image" caption="The Calcutta Botanic Garden. Viscount Valentia, the Earl of Mountnorris in Northern Ireland, visited the garden in 1808. Image credit: Gilman Collection, The Metropolitan Museum of Art." aspect="1.24" %}
 
 The Gulmohar snuck into the list of ornamental plants to be introduced to Bombay, during the first wave of the Society’s botanical experiment in 1838.[^19] Within three years, [William Griffith](Q11705310), an East India Company botanist, was growing the tree in the Calcutta Botanic Garden.[^20] Just two years later, Griffith sent a letter to his peer [Robert Wight](Q1375864), the secretary of the botanical gardens in Madras, sharing “plenty of seed” of the “beautiful tree” that was _Poinciana regia_.[^21] In the late 1840s, Scottish surgeon [Alexander Gibson](Q2833120), superintendent of the botanic garden at Dapuri, commissioned an Indo-Portuguese artist to document the Gulmohar, among other plants, in a distinct example of a [company painting](Q861297), with close-up views that evince an intimate engagement with the plant.[^22] Like their counterparts in Mauritius, the work of the botanists in India was driven by colonial policy and their personal desire to study the “treasure” of India’s flora; they often researched local plant species that were not of much interest to the colonial powers for transplantation or trade.[^23] At the same time, their individual botanical ambitions and ideologies often clashed with those of other botanists practicing in India, producing a rich tapestry of personal motivations in the exchange of botanical material.[^24] Botanical passion and colonial directives thus coincided to see the Gulmohar blossom across gardens in the subcontinent.
 
@@ -90,7 +90,7 @@ The *Delonix regia* becomes the Gulmohar through a unique encounter with the Pea
 
 This dynamic plays out similarly in the [Bengali](Q9610) language: the Gulmohar takes on the name of the Peacock Flower. By the early nineteenth century, the Peacock Flower was called the Krishnachura in Bengali.[^36] Krishnachura is a compound of two words: [Krishna](Q42891) referring to the Hindu deity, who is often symbolized through peacock feathers, and chura possibly referring to bangles, particularly a bride’s wedding bangles. As the nineteenth century came to a close, however, Krishnachura became the Bengali name for the Gulmohar, and the Peacock Flower took on a different name: Radhachura.[^37] Interestingly, [Radha](Q113904) is the name of the divine consort of Krishna—the childhood lover whom he does not marry. The couple is commonly represented as the union of two souls that are one: they cannot be separated, just like the lack of possible differentiation between deer-musk and its perfume, and just as “the moon can never be shorn of its very own moonbeam.”[^38] The longing for the lover who is the self represents the dyad of these divine lovers, who are often referred to by the conjoined name Radhakrishna.[^39] In Bengali, the names of the Peacock Flower and the Gulmohar thus come to embody Radha and Krishna, representing a fascinating union of the divine lovers and the unique possibility of desire and identification between the two red flowers. 
 
-{% include embed/image.html manifest="https://collectionapi.metmuseum.org/api/collection/v1/iiif/65594/1592348/main-image" caption="The divine lovers Radha and Krishna walk in a grove of red flowering trees surrounded by peacocks. Painting circa 1720. Image credit: Cynthia Hazen Polsky and Leon B. Polsky Fund, 2003, The Metropolitan Musuem of Art." aspect=".7" %}
+{% include embed/image.html src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/65594/1592348/main-image" caption="The divine lovers Radha and Krishna walk in a grove of red flowering trees surrounded by peacocks. Painting circa 1720. Image credit: Cynthia Hazen Polsky and Leon B. Polsky Fund, 2003, The Metropolitan Musuem of Art." aspect=".7" %}
 
 # The Gulmohar as Political Symbol
 
