--- a/_posts/2025-07-16-soybean.md
+++ b/_posts/2025-07-16-soybean.md
@@ -65,7 +65,7 @@ In North America, soy was becoming known for being a protein-packed crop that co
 
 Immediately after World War I, U.S. farmers in agricultural systems developed on an industrial scale faced a soil crisis. To keep soldiers fed during the war, many farmers turned to [monocropping](Q17146935), a farming technique that plants the same plant year after year, while depleting the soil of nutrients. To address this problem, many farmers turned to soybeans because of their ability to restore the soil quality through [nitrogen fixation](Q272467).[^31] The plant that was once looked down upon for its “weediness,” was now being lauded for its potential to feed whole nations and save agricultural soil.
 
-{% include embed/iframe.html src="Xlo_l2fFjpsC_PP7.png" caption="Soybeans as Human Food: Unprocessed and Simply Processed" aspect="0.7" %}
+{% include embed/image.html src="Xlo_l2fFjpsC_PP7.png" caption="Soybeans as Human Food: Unprocessed and Simply Processed" aspect="0.7" %}
 
 Soybeans also gained certain notoriety during the uncertainty of [World War II](Q362). While they were prized due to their oiliness, which could be used for food, plastic, and even fuel, farmers and scientists continued to search for other uses for the plant. One innovator, [Ford Motor Company](Q44294) founder [Henry Ford](Q8768), went so far as to build a plastic-bodied car using soybeans.[^32] He envisioned soybeans as a crop that could be industrialized, including having soybeans replace milk, and eventually, cows.[^33] In the early years of World War II, the United States doubled its soybean production to meet wartime demands for “oil and soy by-products.”[^34] By the end of the war, soy was being used in “margarine, paint, mayonnaise, wallpaper, glue, and dynamite, to mention just a few,” putting the United States on the map as the world’s top soybean producer.[^35]  The country continued to hold this status until 2019, when the top producer, for the first time in history, was in the southern hemisphere.[^36]
 
