--- a/_posts/2025-07-16-tamarack.md
+++ b/_posts/2025-07-16-tamarack.md
@@ -34,7 +34,7 @@ In the telling of the story, the Tamarack becomes a signifier of something large
 
 {% include embed/image.html src="wc:Through_the_year_with_birds_and_poets_(poems);_(1900)_(14564594379).jpg" caption="Ojibwe stories help show the interconnectedness and relationships between species, an ideology fundamental to many indigenous philosophies." aspect="0.56" %}
 
-The needles of each Tamarack meet the ground every autumn, golden and crisp, marking the passage of time. Its lively expression in October is brief and wondrous. [Vibrant fuchsia cones](img1/zoomto/345,454,858,739) and [baby-green needles](img1/zoomto/493,1015,715,616) are part of the cycle of new growth in spring. This and the Tamarack’s “wind-swept sweetness” define the character of the landscapes where it grows.[^2] 
+The needles of each Tamarack meet the ground every autumn, golden and crisp, marking the passage of time. Its lively expression in October is brief and wondrous. [Vibrant fuchsia cones](img1/zoomto/pct:37,28,33,31) and [baby-green needles](img1/zoomto/493,1015,715,616) are part of the cycle of new growth in spring. This and the Tamarack’s “wind-swept sweetness” define the character of the landscapes where it grows.[^2] 
 
 {% include embed/image.html id="img1" src="wc:Larix_laricina_15-p.bot-larix.lari-19.jpg" caption="Cones develop around 25 years after Tamarack trees first sprout." aspect="0.75" %}
 {% include embed/image.html src="wc:Pseudolarix_amabilis_02.jpg" caption="New spring needles on the Golden Larch, *Pseudolarix amabilis*." aspect="1.50" %}
